add vn translation elma's diary

--- a/(2019) Elma/04. Rain and Cappuccino.md
+++ b/(2019) Elma/04. Rain and Cappuccino.md
@@ -1,19 +1,19 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-雨とカプチーノ | Ame to Cappuccino
+雨とカプチーノ | Ame to Cappuccino | Mưa và Capuccino
 #### Lyrics
 
-| Japanese                                                                                                            | Romanji                                                                                                                                                                                                                        | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/03/24/yorushika-ame-to-cappuccino/)                                                                                                                                                                                |
-| ------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 灰色に白んだ言葉はカプチーノみたいな色してる<br><br>言い訳はいいよ 窓辺に置いてきて<br><br>数え切れないよ                                                       | haiiro ni shiranda kotoba wa KAPUCHIINO mitai na iro shite’ru<br><br>iiwake wa ii yo madobe ni oite kite<br><br>kazoekirenai yo                                                                                                | My words that had faded to grey are now a color like cappuccino<br><br>Enough of the excuses, leave them by the window<br><br>There are too many to count                                                                                                                     |
-| 灰色に白んだ心はカプチーノみたいな色してる<br><br>言い訳はいいよ 呷ろうカプチーノ<br><br>戯けた振りして                                                        | haiiro ni shiranda kokoro wa KAPUCHIINO mitai na iro shite’ru<br><br>iiwake wa ii yo aorou KAPUCHIINO<br><br>odoketa furi shite                                                                                                | My heart that had faded to grey is now a color like cappuccino<br><br>Enough of the excuses, I’ll gulp down cappuccino<br><br>And pretend to be an idiot                                                                                                                      |
-| さぁ揺蕩うように雨流れ<br><br>僕らに嵐す花に溺れ<br><br>君が褪せないような思い出を<br><br>どうか、どうか、どうか君が溢れないように                                       | saa tayutau you ni ame nagare<br><br>bokura ni arasu hana ni obore<br><br>kimi ga asenai you na omoide o<br><br>douka, douka, douka kimi ga afurenai you ni                                                                    | The rain flows as if indecisive<br><br>We drown in the flowers storming around us<br><br>So you won’t fade away, I keep this memory–<br><br>I hope, I hope, I hope you don’t overflow                                                                                         |
-| 波待つ海岸 紅夕差す日<br><br>窓に反射して<br><br>八月のヴィスビー 潮騒<br><br>待ちぼうけ 海風一つで                                                     | nami matsu kaigan kurenai yuu sasu hi<br><br>mado ni hansha shite<br><br>hachigatsu no VISUBII shiosai<br><br>machibouke umikaze hitotsu de                                                                                    | The beach awaits the waves; a red evening sun shines<br><br>They’re reflected in the window<br><br>Visby in August, the roar of the sea<br><br>I wait in vain for a single sea breeze                                                                                         |
-| 夏泳いだ花の白さ、宵の雨<br><br>流る夜に溺れ<br><br>誰も褪せないような花一つ<br><br>どうか、どうか、どうか胸の内側に挿して                                           | natsu oyoida hana no shirosa, yoi no ame<br><br>nagaru yoru ni obore<br><br>daremo asenai you na hana hitotsu<br><br>douka, douka, douka mune no uchigawa ni sashite                                                           | The white of the flowers that swam in the summer, the evening rain<br><br>Drown in the flowing night<br><br>So no one will fade away, keep this flower–<br><br>I hope, I hope, I hope you’ll stick it to the inside of your heart                                             |
-| ずっとおかしいんだ<br><br>生き方一つ教えてほしいだけ<br><br>払えるものなんて僕にはもうないけど<br><br>何も答えられないなら言葉一つでもいいよ<br><br>わからないよ<br><br>本当にわかんないんだよ | zutto okashii n’da<br><br>ikikata hitotsu oshiete hoshii dake<br><br>haraeru mono nante boku ni wa mou nai kedo<br><br>nani mo kotaerarenai nara kotoba hitotsu demo ii yo  <br>wakaranai yo<br><br>hontou ni wakannai n’da yo | Things have been strange for a long time<br><br>I just want someone to tell me one way to live<br><br>I have no way to pay for it anymore<br><br>But if it’s too hard to answer, a single word would be enough  <br>I don’t understand<br><br>I seriously don’t get it at all |
-| さぁ揺蕩うように雨流れ<br><br>僕らに嵐す花に溺れ<br><br>君が褪せないように書く詩を<br><br>どうか、どうか、どうか今も忘<br>れないように                                   | saa tayutau you ni ame nagare<br><br>bokura ni arasu hana ni obore<br><br>kimi ga asenai you ni kaku uta o<br><br>douka, douka, douka ima mo wasurenai you ni                                                                  | The rain flows as if indecisive<br><br>We drown in the flowers storming around us<br><br>So you won’t fade away, I write this song–<br><br>I hope, I hope, I hope you haven’t forgotten it even now                                                                           |
-| また一つ夏が終わって、花一つを胸に抱いて、<br><br>流る目蓋の裏で<br><br>君が褪せないようにこの詩を<br><br>どうか、どうか君が溢れないように                                   | mata hitotsu natsu ga owatte, hana hitotsu o mune ni daite,<br><br>nagaru mabuta no ura de<br><br>kimi ga asenai you ni kono uta o<br><br>douka, douka, kimi ga afurenai you ni                                                | Another summer comes to an end, and I hold a single flower in my heart,<br><br>Flowing beneath my eyelids<br><br>So you won’t fade away, I wrote this song<br><br>I hope, I hope you don’t overflow                                                                           |
+| Japanese                                                                                                            | Romanji                                                                                                                                                                                                                        | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2020/03/24/yorushika-ame-to-cappuccino/)                                                                                                                                                                                | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                                                                                     |
+| ------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 灰色に白んだ言葉はカプチーノみたいな色してる<br><br>言い訳はいいよ 窓辺に置いてきて<br><br>数え切れないよ                                                       | haiiro ni shiranda kotoba wa KAPUCHIINO mitai na iro shite’ru<br><br>iiwake wa ii yo madobe ni oite kite<br><br>kazoekirenai yo                                                                                                | My words that had faded to grey are now a color like cappuccino<br><br>Enough of the excuses, leave them by the window<br><br>There are too many to count                                                                                                                     | Những ngôn từ sáng dần sang sắc xám giống một ly capuchino<br><br>Những lời biện hộ hãy bỏ lên bên ô cửa sổ đi<br><br>Tớ đếm không nổi nữa rồi                                                                                                                            |
+| 灰色に白んだ心はカプチーノみたいな色してる<br><br>言い訳はいいよ 呷ろうカプチーノ<br><br>戯けた振りして                                                        | haiiro ni shiranda kokoro wa KAPUCHIINO mitai na iro shite’ru<br><br>iiwake wa ii yo aorou KAPUCHIINO<br><br>odoketa furi shite                                                                                                | My heart that had faded to grey is now a color like cappuccino<br><br>Enough of the excuses, I’ll gulp down cappuccino<br><br>And pretend to be an idiot                                                                                                                      | Trái tim của tớ sáng dần sang sắc xám giống một ly capuchino<br><br>Biện hộ thế là đủ rồi, hãy uống một ngụm capuchino<br><br>Cứ xem như tớ vừa nói đùa đi                                                                                                                |
+| さぁ揺蕩うように雨流れ<br><br>僕らに嵐す花に溺れ<br><br>君が褪せないような思い出を<br><br>どうか、どうか、どうか君が溢れないように                                       | saa tayutau you ni ame nagare<br><br>bokura ni arasu hana ni obore<br><br>kimi ga asenai you na omoide o<br><br>douka, douka, douka kimi ga afurenai you ni                                                                    | The rain flows as if indecisive<br><br>We drown in the flowers storming around us<br><br>So you won’t fade away, I keep this memory–<br><br>I hope, I hope, I hope you don’t overflow                                                                                         | Cơn mưa như dao động mọi thứ<br><br>Ngấm vào bông qua quật đổ chúng ta<br><br>Những ký ức không hề phai mờ hình ảnh về cậu<br><br>Xin cầu đừng, đừng đổ tràn chúng ra nữa                                                                                                 |
+| 波待つ海岸 紅夕差す日<br><br>窓に反射して<br><br>八月のヴィスビー 潮騒<br><br>待ちぼうけ 海風一つで                                                     | nami matsu kaigan kurenai yuu sasu hi<br><br>mado ni hansha shite<br><br>hachigatsu no VISUBII shiosai<br><br>machibouke umikaze hitotsu de                                                                                    | The beach awaits the waves; a red evening sun shines<br><br>They’re reflected in the window<br><br>Visby in August, the roar of the sea<br><br>I wait in vain for a single sea breeze                                                                                         | Bờ biển chờ đợi cơn sóng, ánh mặt trời xuyên qua màn đêm đỏ thẫm<br><br>Đọng lại bên cửa sổ<br><br>Visby vào tháng 8 chờ đợi tiếng sóng vỗ trong vô vọng<br><br>Chỉ còn lại gió biển lẻ loi                                                                               |
+| 夏泳いだ花の白さ、宵の雨<br><br>流る夜に溺れ<br><br>誰も褪せないような花一つ<br><br>どうか、どうか、どうか胸の内側に挿して                                           | natsu oyoida hana no shirosa, yoi no ame<br><br>nagaru yoru ni obore<br><br>daremo asenai you na hana hitotsu<br><br>douka, douka, douka mune no uchigawa ni sashite                                                           | The white of the flowers that swam in the summer, the evening rain<br><br>Drown in the flowing night<br><br>So no one will fade away, keep this flower–<br><br>I hope, I hope, I hope you’ll stick it to the inside of your heart                                             | Sắc trắng của bông hoa bơi trong mùa hạ<br><br>Bị nhấn chìm vào màn đêm đang tuôn mưa dai dẳng<br><br>Bông hoa hằn sâu hình bóng của đôi ta<br><br>Xin cậu, xin cậu hãy găm nó vào sâu trong lồng ngực                                                                    |
+| ずっとおかしいんだ<br><br>生き方一つ教えてほしいだけ<br><br>払えるものなんて僕にはもうないけど<br><br>何も答えられないなら言葉一つでもいいよ<br><br>わからないよ<br><br>本当にわかんないんだよ | zutto okashii n’da<br><br>ikikata hitotsu oshiete hoshii dake<br><br>haraeru mono nante boku ni wa mou nai kedo<br><br>nani mo kotaerarenai nara kotoba hitotsu demo ii yo  <br>wakaranai yo<br><br>hontou ni wakannai n’da yo | Things have been strange for a long time<br><br>I just want someone to tell me one way to live<br><br>I have no way to pay for it anymore<br><br>But if it’s too hard to answer, a single word would be enough  <br>I don’t understand<br><br>I seriously don’t get it at all | Tớ cứ mãi thấy thật kỳ lạ<br><br>Tớ chỉ mong cậu chỉ cho tớ một lối để sống thôi<br><br>Mặc dù tớ chẳng còn gì để trả được cho cậu<br><br>Nhưng nếu cậu không biết phải trả lời sao, thì chỉ một từ thôi cũng được<br>Tớ không hiểu được<br><br>Thực sự tớ không biết đâu |
+| さぁ揺蕩うように雨流れ<br><br>僕らに嵐す花に溺れ<br><br>君が褪せないように書く詩を<br><br>どうか、どうか、どうか今も忘<br>れないように                                   | saa tayutau you ni ame nagare<br><br>bokura ni arasu hana ni obore<br><br>kimi ga asenai you ni kaku uta o<br><br>douka, douka, douka ima mo wasurenai you ni                                                                  | The rain flows as if indecisive<br><br>We drown in the flowers storming around us<br><br>So you won’t fade away, I write this song–<br><br>I hope, I hope, I hope you haven’t forgotten it even now                                                                           | Cơn mưa như dao động mọi thứ<br><br>Ngấm vào bông hoa quật đổ chúng ta<br><br>Bài hát tớ biết ra để hình bóng cậu không phai màu<br><br>Xin cậu, xin cậu đừng quên nó đi                                                                                                  |
+| また一つ夏が終わって、花一つを胸に抱いて、<br><br>流る目蓋の裏で<br><br>君が褪せないようにこの詩を<br><br>どうか、どうか君が溢れないように                                   | mata hitotsu natsu ga owatte, hana hitotsu o mune ni daite,<br><br>nagaru mabuta no ura de<br><br>kimi ga asenai you ni kono uta o<br><br>douka, douka, kimi ga afurenai you ni                                                | Another summer comes to an end, and I hold a single flower in my heart,<br><br>Flowing beneath my eyelids<br><br>So you won’t fade away, I wrote this song<br><br>I hope, I hope you don’t overflow                                                                           | Lại một mùa hè nữa qua đi, tớ vẫn ôm một bông hoa trong tim<br><br>Phía sau bờ mi đang nghẹn ngào của tớ<br><br>Là bài ca tớ viết để hình bóng cậu không phai mờ<br><br>Xin cậu, xin cậu đừng tràn ly                                                                     |
 
 ##### Notes
 >
