--- a/(2019) Elma/09. A Hole Opened Up in My Heart.md
+++ b/(2019) Elma/09. A Hole Opened Up in My Heart.md
@@ -1,23 +1,23 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-心に穴が空いた | Kokoro ni Ana ga Aita
+心に穴が空いた | Kokoro ni Ana ga Aita | Có một lỗ hổng trong trái tim
 #### Lyrics
 
-| Japanese                                                                                                                         | Romanji                                                                                                                                                                                                                                                 | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/06/27/yorushika-kokoro-ni-ana-ga-aita/)                                                                                                                                                                                             |
-| -------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 小さな穴が空いた<br><br>この胸の中心に一つ<br><br>夕陽の街を塗った<br><br>夜紛いの夕暮れ                                                                         | chiisa na ana ga aita<br><br>kono mune no chuushin ni hitotsu<br><br>yuuhi no machi o nutta<br><br>yorumagai no yuugure                                                                                                                                 | A small hole opened up<br><br>Right in the middle of my chest<br><br>A night-imitating twilight<br><br>Painted the town                                                                                                                                                                        |
-| 忘れたいのだ<br><br>忘れたいのだ<br><br>忘れたい脳裏を埋め切った青空に君を描き出すだけ                                                                              | wasuretai no da<br><br>wasuretai no da<br><br>wasuretai nouri o umekitta aozora ni kimi o egakidasu dake                                                                                                                                                | I want to forget<br><br>I want to forget<br><br>But in the blue sky that buries my mind that wants to forget, I only see you                                                                                                                                                                   |
-| だから心に穴が空いた<br><br>埋めるように鼓動が鳴った<br><br>君への言葉も<br><br>口を開けば大体言い訳だった                                                                | dakara kokoro ni ana ga aita<br><br>umeru you ni kodou ga natta<br><br>kimi e no kotoba mo<br><br>kuchi o hirakeba daitai iiwake datta                                                                                                                  | That’s why a hole opened up in my heart<br><br>My heartbeat pounded as if to fill it in<br><br>When I opened my mouth to talk to you<br><br>What came out was mostly excuses                                                                                                                   |
-| だから心に穴が空いた<br><br>降る雨だけ温いと思った<br><br>繕って 繕って 繕って<br><br>顔のない自分だけ                                                                 | dakara kokoro ni ana ga aita<br><br>furu ame dake nurui to omotta<br><br>tsukurotte tsukurotte tsukurotte<br><br>kao no nai jibun dake                                                                                                                  | That’s why a hole opened up in my heart<br><br>I thought only the falling rain was warm<br><br>I’m fixing, fixing, fixing<br><br>My faceless self alone                                                                                                                                        |
-| 少しずつ穴の開いた木漏れ日の、森で眠るように<br><br>深海みたいに深く<br><br>もっと微睡むように深く、深く、深く<br><br>深く夜を纏った目の奥に月明かりを見るまで                                      | sukoshizutsu ana no aita komorebi no, mori de nemuru you ni<br><br>shinkai mitai ni fukaku<br><br>motto madoromu you ni fukaku, fukaku, fukaku<br><br>fukaku yoru o matotta me no oku ni tsukiakari o miru made                                         | It’s like sleeping in a forest where a hole has gradually opened in the light coming through the leaves<br><br>Deep like the bottom of the sea<br><br>Deep, deep, deep, like sleeping still more<br><br>Until moonlight is seen in the depths of eyes covered up by the deep darkness of night |
-| 君の心に穴を開けた<br><br>音楽が何だって言うんだ<br><br>ただ口を開け<br><br>黙ったままなんて一生報われないよ                                                               | kimi no kokoro ni ana o aketa<br><br>ongaku ga nandatte iu n’da<br><br>tada kuchi o hirake<br><br>damatta mama nante isshō mukuwa renai yo                                                                                                              | I opened up a hole in your heart<br><br>What does music matter, anyway?<br><br>Just open your mouth<br><br>If you stay silent, you’ll never get the things you deserve                                                                                                                         |
-| 忘れたいことが多くなって<br><br>諦めばかり口に出して<br><br>躓いて、躓いて、転がって、土の冷たさだけ                                                                       | wasuretai koto ga ooku natte<br><br>akirame bakari kuchi ni dashite<br><br>tsumazuite, tsumazuite, korogatte, tsuchi no tsumetasa dake                                                                                                                  | There are so many things I want to forget<br><br>Only resignation comes out of my mouth<br><br>Stumbling, stumbling, falling, feeling only the cold ground                                                                                                                                     |
-| 君の人生になりたい僕の、人生を書きたい<br><br>君の残した詩のせいだ<br><br>全部音楽のせいだ                                                                            | kimi no jinsei ni naritai boku no, jinsei o kakitai<br><br>kimi no nokoshita shi no sei da<br><br>zenbu ongaku no sei da                                                                                                                                | I want to write about my life, which I wanted to make into your life<br><br>It’s because of the songs you left behind<br><br>It’s all music’s fault                                                                                                                                            |
-| 君の口調を真似した<br><br>君の生き方を模した<br><br>何も残らないほどに 僕を消し飛ばすほどに<br><br>残ってる                                                               | kimi no kuchou o mane shita<br><br>kimi no ikikata o moshita<br><br>nani mo nokoranai hodo ni boku o keshitobasu hodo ni<br><br>nokotte’ru                                                                                                              | I imitated the way you spoke<br><br>I copied the way you lived<br><br>But though I tried to erase myself so that nothing of me would remain<br><br>It remains still                                                                                                                            |
-| 心の穴の奥に棲んだ<br><br>君の言葉に縋り付いた<br><br>でも違うんだよ、もう<br><br>さよならだなんて一生聞きたくないよ<br><br>忘れたいことが多くなって<br><br>これから僕だけ年老いて<br><br>冷め切って、冷め切って | kokoro no ana no oku ni sunda<br><br>kimi no kotoba ni sugaritsuita<br><br>demo chigau n’da yo, mou<br><br>sayonara da nante isshou kikitakunai yo<br><br>wasuretai koto ga ooku natte<br><br>kore kara boku dake toshioite<br><br>samekitte, samekitte | I clung to your words<br><br>Which nestled in the hole in my heart<br><br>But it’s different now<br><br>I don’t ever want to hear “goodbye”<br><br>There are so many things I want to forget<br><br>From now on, only I will grow older<br><br>Growing colder, growing colder                  |
-| 僕の心に穴が開いた<br><br>君の言葉で穴が開いた<br><br>今ならわかるよ<br><br>「君だけが僕の音楽」なんだよ、エイミー                                                            | boku no kokoro ni ana ga aita<br><br>kimi no kotoba de ana ga aita<br><br>ima nara wakaru yo<br><br>“kimi dake ga boku no ongaku” na n’da yo, EIMII                                                                                                     | A hole opened up in my heart<br><br>Your words opened a hole in my heart<br><br>I understand now<br><br>“You alone are my music,” Amy                                                                                                                                                          |
-| だから心に穴が空いた<br><br>その向こう側に君が棲んだ<br><br>広がって 広がって 広がって<br><br>戻らない穴だけ                                                              | dakara kokoro ni ana ga aita<br><br>sono mukougawa ni kimi ga sunda<br><br>hirogatte hirogatte hirogatte<br><br>modoranai ana dake                                                                                                                      | That’s why a hole opened up in my heart<br><br>You were nestled on the other side of it<br><br>It will never go back to the way it was<br><br>It’s just a hole that’s spreading, spreading, spreading                                                                                          |
-| 穴の空いた僕だけ                                                                                                                         | ana no aita boku dake                                                                                                                                                                                                                                   | Just me, with a hole in my heart                                                                                                                                                                                                                                                               |
+| Japanese                                                                                                                         | Romanji                                                                                                                                                                                                                                                 | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/06/27/yorushika-kokoro-ni-ana-ga-aita/)                                                                                                                                                                                             | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                                                                                                    |
+| -------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 小さな穴が空いた<br><br>この胸の中心に一つ<br><br>夕陽の街を塗った<br><br>夜紛いの夕暮れ                                                                         | chiisa na ana ga aita<br><br>kono mune no chuushin ni hitotsu<br><br>yuuhi no machi o nutta<br><br>yorumagai no yuugure                                                                                                                                 | A small hole opened up<br><br>Right in the middle of my chest<br><br>A night-imitating twilight<br><br>Painted the town                                                                                                                                                                        | Có một lỗ hổng nhỏ, thủng ngay giữa trái tim tớ<br><br>Hoàng hôn nhá nhem tối bao trùm lấy thành phố                                                                                                                                                                                     |
+| 忘れたいのだ<br><br>忘れたいのだ<br><br>忘れたい脳裏を埋め切った青空に君を描き出すだけ                                                                              | wasuretai no da<br><br>wasuretai no da<br><br>wasuretai nouri o umekitta aozora ni kimi o egakidasu dake                                                                                                                                                | I want to forget<br><br>I want to forget<br><br>But in the blue sky that buries my mind that wants to forget, I only see you                                                                                                                                                                   | Tớ muốn quên đi, tớ muốn quên đi<br><br>Vậy mà trên bầu trời xanh lấp đầy tâm trí muốn quên đi đó, vẫn chỉ hiện hữu hình ảnh cậu                                                                                                                                                         |
+| だから心に穴が空いた<br><br>埋めるように鼓動が鳴った<br><br>君への言葉も<br><br>口を開けば大体言い訳だった                                                                | dakara kokoro ni ana ga aita<br><br>umeru you ni kodou ga natta<br><br>kimi e no kotoba mo<br><br>kuchi o hirakeba daitai iiwake datta                                                                                                                  | That’s why a hole opened up in my heart<br><br>My heartbeat pounded as if to fill it in<br><br>When I opened my mouth to talk to you<br><br>What came out was mostly excuses                                                                                                                   | Vậy nên trái tim tớ bị thủng rồi, nhịp tim vang lên để lấp lại<br><br>Những lời tớ gửi đến cậu, cơ bản cũng toàn là biện hộ                                                                                                                                                              |
+| だから心に穴が空いた<br><br>降る雨だけ温いと思った<br><br>繕って 繕って 繕って<br><br>顔のない自分だけ                                                                 | dakara kokoro ni ana ga aita<br><br>furu ame dake nurui to omotta<br><br>tsukurotte tsukurotte tsukurotte<br><br>kao no nai jibun dake                                                                                                                  | That’s why a hole opened up in my heart<br><br>I thought only the falling rain was warm<br><br>I’m fixing, fixing, fixing<br><br>My faceless self alone                                                                                                                                        | Vậy nên trái tim tớ bị thủng rồi, chỉ có cơn mưa là dịu dàng thôi<br><br>Sửa đi sửa lại, sửa mãi bản thân - kẻ không có khuôn mặt                                                                                                                                                        |
+| 少しずつ穴の開いた木漏れ日の、森で眠るように<br><br>深海みたいに深く<br><br>もっと微睡むように深く、深く、深く<br><br>深く夜を纏った目の奥に月明かりを見るまで                                      | sukoshizutsu ana no aita komorebi no, mori de nemuru you ni<br><br>shinkai mitai ni fukaku<br><br>motto madoromu you ni fukaku, fukaku, fukaku<br><br>fukaku yoru o matotta me no oku ni tsukiakari o miru made                                         | It’s like sleeping in a forest where a hole has gradually opened in the light coming through the leaves<br><br>Deep like the bottom of the sea<br><br>Deep, deep, deep, like sleeping still more<br><br>Until moonlight is seen in the depths of eyes covered up by the deep darkness of night | Như thể đang ngủ trong khu rừng, ánh nắng xen qua kẽ lá dần len lỏi<br><br>Giấc ngủ sâu như trong lòng đại dương<br><br>Tớ sẽ mãi chìm sâu, thật sâu vào cơn mê<br><br>Cho đến khi nhìn thấy ánh trăng sâu trong mặt trời khâu lại màn đêm sâu thẳm                                      |
+| 君の心に穴を開けた<br><br>音楽が何だって言うんだ<br><br>ただ口を開け<br><br>黙ったままなんて一生報われないよ                                                               | kimi no kokoro ni ana o aketa<br><br>ongaku ga nandatte iu n’da<br><br>tada kuchi o hirake<br><br>damatta mama nante isshō mukuwa renai yo                                                                                                              | I opened up a hole in your heart<br><br>What does music matter, anyway?<br><br>Just open your mouth<br><br>If you stay silent, you’ll never get the things you deserve                                                                                                                         | Tớ đã mở một lỗ trong tim cậu, để nói cho cậu biết âm nhạc là gì<br><br>Tớ sẽ nói ra<br><br>Vì cứ im lặng thì cả đời tớ sẽ không được báo đáp                                                                                                                                            |
+| 忘れたいことが多くなって<br><br>諦めばかり口に出して<br><br>躓いて、躓いて、転がって、土の冷たさだけ                                                                       | wasuretai koto ga ooku natte<br><br>akirame bakari kuchi ni dashite<br><br>tsumazuite, tsumazuite, korogatte, tsuchi no tsumetasa dake                                                                                                                  | There are so many things I want to forget<br><br>Only resignation comes out of my mouth<br><br>Stumbling, stumbling, falling, feeling only the cold ground                                                                                                                                     | Những thứ muốn quên cứ chồng chết, còn tớ thì chỉ biết nói lời buông xuôi<br><br>Vấp rồi lại vấp, tớ ngã xuống, chỉ còn thấy sự lạnh lẽo của đất                                                                                                                                         |
+| 君の人生になりたい僕の、人生を書きたい<br><br>君の残した詩のせいだ<br><br>全部音楽のせいだ                                                                            | kimi no jinsei ni naritai boku no, jinsei o kakitai<br><br>kimi no nokoshita shi no sei da<br><br>zenbu ongaku no sei da                                                                                                                                | I want to write about my life, which I wanted to make into your life<br><br>It’s because of the songs you left behind<br><br>It’s all music’s fault                                                                                                                                            | Tớ muốn viết về cuộc đời tớ khi muốn sống cuộc đời cậu<br><br>Tại những bài hát cậu để lại đó, tất cả là tại âm nhạc đó!                                                                                                                                                                 |
+| 君の口調を真似した<br><br>君の生き方を模した<br><br>何も残らないほどに 僕を消し飛ばすほどに<br><br>残ってる                                                               | kimi no kuchou o mane shita<br><br>kimi no ikikata o moshita<br><br>nani mo nokoranai hodo ni boku o keshitobasu hodo ni<br><br>nokotte’ru                                                                                                              | I imitated the way you spoke<br><br>I copied the way you lived<br><br>But though I tried to erase myself so that nothing of me would remain<br><br>It remains still                                                                                                                            | Tớ bắt chước giọng điệu của cậu, tớ mô phỏng lại lối sống của cậu<br><br>Giữ lại cậu bên tớ, đến mức xóa sạch hình ảnh tớ đến không còn gì cả                                                                                                                                            |
+| 心の穴の奥に棲んだ<br><br>君の言葉に縋り付いた<br><br>でも違うんだよ、もう<br><br>さよならだなんて一生聞きたくないよ<br><br>忘れたいことが多くなって<br><br>これから僕だけ年老いて<br><br>冷め切って、冷め切って | kokoro no ana no oku ni sunda<br><br>kimi no kotoba ni sugaritsuita<br><br>demo chigau n’da yo, mou<br><br>sayonara da nante isshou kikitakunai yo<br><br>wasuretai koto ga ooku natte<br><br>kore kara boku dake toshioite<br><br>samekitte, samekitte | I clung to your words<br><br>Which nestled in the hole in my heart<br><br>But it’s different now<br><br>I don’t ever want to hear “goodbye”<br><br>There are so many things I want to forget<br><br>From now on, only I will grow older<br><br>Growing colder, growing colder                  | Tớ sống trong lỗ hổng sâu trong tim mình, bám chặt lấy ngôn từ của cậu<br><br>Nhưng mà tớ sai rồi<br><br>“Chúng ta phải tạm biệt thôi”, lời nói đó cả đời này tớ không muốn nghe<br><br>Những điều muốn quên đi cứ chồng chết, từ giờ chỉ còn mình tớ già đi<br><br>Lạnh ngắt, lạnh ngắt |
+| 僕の心に穴が開いた<br><br>君の言葉で穴が開いた<br><br>今ならわかるよ<br><br>「君だけが僕の音楽」なんだよ、エイミー                                                            | boku no kokoro ni ana ga aita<br><br>kimi no kotoba de ana ga aita<br><br>ima nara wakaru yo<br><br>“kimi dake ga boku no ongaku” na n’da yo, EIMII                                                                                                     | A hole opened up in my heart<br><br>Your words opened a hole in my heart<br><br>I understand now<br><br>“You alone are my music,” Amy                                                                                                                                                          | Trái tim tớ đã thủng một lỗ<br><br>Thủng bằng ngôn từ của cậu, giờ đây tớ đã hiểu rồi<br><br>“Chỉ có cậu mới là âm nhạc của tớ”, tớ hiểu rồi Amy à                                                                                                                                       |
+| だから心に穴が空いた<br><br>その向こう側に君が棲んだ<br><br>広がって 広がって 広がって<br><br>戻らない穴だけ                                                              | dakara kokoro ni ana ga aita<br><br>sono mukougawa ni kimi ga sunda<br><br>hirogatte hirogatte hirogatte<br><br>modoranai ana dake                                                                                                                      | That’s why a hole opened up in my heart<br><br>You were nestled on the other side of it<br><br>It will never go back to the way it was<br><br>It’s just a hole that’s spreading, spreading, spreading                                                                                          | Vậy nên trái tim tớ đã thủng một lỗ, và phía bên kia cậu đã ngụ tại đó<br><br>Chiếc lỗ cứ rộng ra, lan ra, không còn quay lại được nữa                                                                                                                                                   |
+| 穴の空いた僕だけ                                                                                                                         | ana no aita boku dake                                                                                                                                                                                                                                   | Just me, with a hole in my heart                                                                                                                                                                                                                                                               | Chỉ còn lại tớ với lỗ hổng lớn                                                                                                                                                                                                                                                           |
 ##### Notes
 >
