--- a/(2019) Elma/12. Amy.md
+++ b/(2019) Elma/12. Amy.md
@@ -4,18 +4,18 @@ await dv.view('_script');
 エイミー | Amy
 #### Lyrics
 
-| Japanese                                                                   | Romanji                                                                                                                                                | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                       |
-| -------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 口に出してもう一回<br><br>ギターを鳴らして二拍<br><br>歌詞を書いてもう三節<br><br>四度目の夏が来る              | kuchi ni dashite moo ikkai<br><br>gitaa o narashite ni haku<br><br>kashi o kaite moo san setsu<br><br>yon dome no natsugakuru                          | Say it one more time<br><br>Two beats ring out from a guitar<br><br>Three measures worth of lyrics written down<br><br>The fourth summer will come                                               |
-| 誤解ばっかさ、手遅れみたいな話が一つ<br><br>頭の六畳間、君と暮らす僕がいる                                  | gokai bakka sa, teokure mitai nahanashi ga hitotsu<br><br>atama no rokujooma, kimi to kurasu boku ga iru                                               | We’ve been so full of misunderstandings, I have one more story to tell before it’s too late<br><br>I live there with you, inside the room in my head that’s 6 tatami mats wide                   |
-| 忘れたいこと、わからないことも僕らのものだ<br><br>長い夜の終わりを信じながら                                 | wasuretai koto, wakaranai koto mo bokura no monoda<br><br>nagaii yoru no owari o shinji nagara                                                         | These things we want to forget and that we don’t understand belong to us<br><br>While believing that this long night will end                                                                    |
-| さぁ人生全部が馬鹿みたいなのに<br><br>流れる白い雲でもう<br><br>想像力が君をなぞっている<br><br>あの夏にずっと君がいる    | saa jinsei zenbu ga bakamitai nano ni<br><br>nagareru shiroi kumo demoo<br><br>soozooryoku ga kimi o nazotte iru<br><br>ano natsu ni zutto kimi ga iru | Come, even though life seems stupid through and through<br><br>Just by looking at the moving white clouds above<br><br>My imagination is reproducing you<br><br>You forever exist in that summer |
-| 行き急いで数十年　許せないことばかり<br><br>歌詞に書いた人生観すら　ただの文字になる                             | iki isoide suu juu-nen<br>yurusenai koto bakari<br><br>kashi ni kaite jinsei kara<br>tada no moji ni naru                                              | Decades will pass quickly, full of unforgivable things<br><br>But even the view of life I pen in lyrics will turn into meager words                                                              |
-| 言葉だって消耗品　思い出は底がある<br><br>何かに待ち惚け、百日紅の花が咲く                                  | kotoba datte shookoohin<br>omoide wa soko ga aru<br><br>nani ka machibooke, sarusuberi no hanagasaku                                                   | Words are consumable goods, memories exist somewhere deep down<br><br>Waiting in vain, a crepe myrtle will bloom                                                                                 |
-| このまま、ほら<br><br>このまま、どこか遠くの国で浅い夏の<br><br>隙間を彷徨いながら                          | kono mama, hora<br><br>kono mama, dokoka yoku no kuni de asai natsu no<br><br>sukima o samayoinagara                                                   | At this point, see<br><br>At this point, as you wander in the cracks of<br><br>A pale summer somewhere far away                                                                                  |
-| さぁ人生全部で君を書いたのに、忘れぬ口癖のよう<br><br>想像力が紙をなぞっている<br><br>指先にずっと君がいる              | saa jinsei zenbu de kimi o kaita no ni, wasurenu kuchiguse no yoo<br><br>soozooryoku ga kami o nazotte iru<br><br>yubisaki ni zotto kimi ga iru        | Come, though I’ve written about you my entire life, like a habit of speech I can’t forget<br><br>My imagination is tracing the paper<br><br>You forever exist in my fingertips                   |
-| もういいよ                                                                      | moo ii yo                                                                                                                                              | It’s alright now                                                                                                                                                                                 |
-| さぁもういいかい、この歌で最後だから<br><br>何も言わないままでも<br><br>人生なんて終わるものなのさ<br><br>いいから歌え、もう | saa moo ii kai, kono uta de saiko dakara<br><br>nanimo iwanai mama demo<br><br>jinsei nante owaru monona no sa<br><br>ii kara utae, moo                | Come, is it alright now? Since this is the last song<br><br>Even if you don’t say anything<br><br>Life is something that ends<br><br>So sing already!                                            |
-| さぁ人生全部が馬鹿みたいなのに<br><br>流れる白い雲でもう<br><br>想像力が僕をなぞっている<br><br>あの夏にずっと君がいる    | saa jinsei zenbu ga bakamitai nano ni<br><br>nagareru shiroi kumo demoo<br><br>soozooryoku ga boku o nazotte iru<br><br>ano natsu ni zutto kimi ga iru | Come, even though life seems stupid through and through<br><br>Just by looking at the moving white clouds above<br><br>My imagination is reproducing me<br><br>You forever exist in that summer  |
+| Japanese                                                                   | Romanji                                                                                                                                                | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                       | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                  |
+| -------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 口に出してもう一回<br><br>ギターを鳴らして二拍<br><br>歌詞を書いてもう三節<br><br>四度目の夏が来る              | kuchi ni dashite moo ikkai<br><br>gitaa o narashite ni haku<br><br>kashi o kaite moo san setsu<br><br>yon dome no natsugakuru                          | Say it one more time<br><br>Two beats ring out from a guitar<br><br>Three measures worth of lyrics written down<br><br>The fourth summer will come                                               | Tự nói ra thêm một lần nữa, đàn ghita vang lên hai phách<br><br>Lời bài hát viết ra đã đến nhịp ba, mùa hè thứ tư đã đến rồi                                                           |
+| 誤解ばっかさ、手遅れみたいな話が一つ<br><br>頭の六畳間、君と暮らす僕がいる                                  | gokai bakka sa, teokure mitai nahanashi ga hitotsu<br><br>atama no rokujooma, kimi to kurasu boku ga iru                                               | We’ve been so full of misunderstandings, I have one more story to tell before it’s too late<br><br>I live there with you, inside the room in my head that’s 6 tatami mats wide                   | Chúng ta toàn là hiểu lầm, và sự muộn màng cũng là một trong số đó<br><br>Trong không gian sáu chiếu trong đầu tớ, tớ và cậu đang sống cùng nhau                                       |
+| 忘れたいこと、わからないことも僕らのものだ<br><br>長い夜の終わりを信じながら                                 | wasuretai koto, wakaranai koto mo bokura no monoda<br><br>nagaii yoru no owari o shinji nagara                                                         | These things we want to forget and that we don’t understand belong to us<br><br>While believing that this long night will end                                                                    | Những chuyện muốn quên đi, những chuyện không hiểu, đều là của chúng ta<br><br>Ta đều tin vào sự kết thúc của màn đêm dài                                                              |
+| さぁ人生全部が馬鹿みたいなのに<br><br>流れる白い雲でもう<br><br>想像力が君をなぞっている<br><br>あの夏にずっと君がいる    | saa jinsei zenbu ga bakamitai nano ni<br><br>nagareru shiroi kumo demoo<br><br>soozooryoku ga kimi o nazotte iru<br><br>ano natsu ni zutto kimi ga iru | Come, even though life seems stupid through and through<br><br>Just by looking at the moving white clouds above<br><br>My imagination is reproducing you<br><br>You forever exist in that summer | Cuộc đời này tất cả đều thật ngu ngốc<br><br>Vậy mà ngay cả đám mây trắng trôi trên cao<br><br>Trí tưởng tượng của nó cũng đi theo cậu<br><br>Cậu đã ở lại mãi trong mùa hè năm đó rồi |
+| 行き急いで数十年　許せないことばかり<br><br>歌詞に書いた人生観すら　ただの文字になる                             | iki isoide suu juu-nen<br>yurusenai koto bakari<br><br>kashi ni kaite jinsei kara<br>tada no moji ni naru                                              | Decades will pass quickly, full of unforgivable things<br><br>But even the view of life I pen in lyrics will turn into meager words                                                              | Sống vội vài chục năm, toàn những điều tự không thể tha thứ<br><br>Ngay cả nhân sinh quan tớ viết trong bài hát, cũng chỉ là con chữ mà thôi                                           |
+| 言葉だって消耗品　思い出は底がある<br><br>何かに待ち惚け、百日紅の花が咲く                                  | kotoba datte shookoohin<br>omoide wa soko ga aru<br><br>nani ka machibooke, sarusuberi no hanagasaku                                                   | Words are consumable goods, memories exist somewhere deep down<br><br>Waiting in vain, a crepe myrtle will bloom                                                                                 | Ngôn từ cũng chỉ là tiêu sản, ký ức sẽ có đáy<br><br>Hoa bằng lăng sẻ chờ đợi mỏi mòn điều gì đó đã nở rồi                                                                             |
+| このまま、ほら<br><br>このまま、どこか遠くの国で浅い夏の<br><br>隙間を彷徨いながら                          | kono mama, hora<br><br>kono mama, dokoka yoku no kuni de asai natsu no<br><br>sukima o samayoinagara                                                   | At this point, see<br><br>At this point, as you wander in the cracks of<br><br>A pale summer somewhere far away                                                                                  | Cứ vậy thì, cậu xem<br><br>Cứ như vậy, tớ sẽ lạc lõng trong kẽ hở của mùa hè<br><br>Ở một đất nước xa xôi nào đó                                                                       |
+| さぁ人生全部で君を書いたのに、忘れぬ口癖のよう<br><br>想像力が紙をなぞっている<br><br>指先にずっと君がいる              | saa jinsei zenbu de kimi o kaita no ni, wasurenu kuchiguse no yoo<br><br>soozooryoku ga kami o nazotte iru<br><br>yubisaki ni zotto kimi ga iru        | Come, though I’ve written about you my entire life, like a habit of speech I can’t forget<br><br>My imagination is tracing the paper<br><br>You forever exist in my fingertips                   | Tớ đã dành cả cuộc đời để viết về cậu rồi, vậy mà tớ vẫn không quên được<br><br>Trí tưởng tượng men theo trang giấy<br><br>Trên đầu ngón tay này luôn có cậu ở đó<br>                  |
+| もういいよ                                                                      | moo ii yo                                                                                                                                              | It’s alright now                                                                                                                                                                                 | Đủ rồi                                                                                                                                                                                 |
+| さぁもういいかい、この歌で最後だから<br><br>何も言わないままでも<br><br>人生なんて終わるものなのさ<br><br>いいから歌え、もう | saa moo ii kai, kono uta de saiko dakara<br><br>nanimo iwanai mama demo<br><br>jinsei nante owaru monona no sa<br><br>ii kara utae, moo                | Come, is it alright now? Since this is the last song<br><br>Even if you don’t say anything<br><br>Life is something that ends<br><br>So sing already!                                            | Nào sẵn sàng chưa? Bài hát này là kết thúc rồi<br><br>Dù không nói gì đi nữa<br><br>Cuộc đời này vẫn sẽ kết thúc mà thôi<br><br>Vậy nên không sao đâu, cứ hát lên đi                   |
+| さぁ人生全部が馬鹿みたいなのに<br><br>流れる白い雲でもう<br><br>想像力が僕をなぞっている<br><br>あの夏にずっと君がいる    | saa jinsei zenbu ga bakamitai nano ni<br><br>nagareru shiroi kumo demoo<br><br>soozooryoku ga boku o nazotte iru<br><br>ano natsu ni zutto kimi ga iru | Come, even though life seems stupid through and through<br><br>Just by looking at the moving white clouds above<br><br>My imagination is reproducing me<br><br>You forever exist in that summer  | Cuộc đời này tất cả đều thật ngu ngốc<br><br>Vậy mà ngay cả đám mây trắng trôi trên cao<br><br>Trí tưởng tượng của nó cũng đi theo tớ<br><br>Cậu đã ở lại mãi trong mùa hè năm đó rồi  |
 ##### Notes
 >
