--- a/(2019) Elma/14. Nautilus.md
+++ b/(2019) Elma/14. Nautilus.md
@@ -4,17 +4,17 @@ await dv.view('_script');
 ノーチラス | Nautilus
 #### Lyrics
 
-| Japanese                                                                                       | Romanji                                                                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/12/12/yorushika-nautilus/)                                                                                                                                                                  |
-| ---------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 時計が鳴ったからやっと眼を覚ました<br><br>昨日の風邪がちょっと嘘みたいだ<br><br>出かけようにも、あぁ、予報が雨模様だ<br><br>どうせ出ないのは夜が明けないから     | tokei ga natta kara yatto me o samashita<br><br>kinou no kaze ga chotto uso mitai da<br><br>dekakeyou ni mo, aa, yohou ga amemoyou da<br><br>douse denai no wa yoru ga akenai kara                     | When the alarm clock rang, I finally woke up<br><br>The flu I had yesterday doesn’t seem real anymore<br><br>I think of going out, but, ah, the forecast says it looks like rain<br><br>Well, I couldn’t go anyway because it’s still dark             |
-| 喉が渇くとか、心が痛いとか、人間の全部が邪魔してるんだよ                                                                   | nodo ga kawaku to ka, kokoro ga itai to ka, ningen no zenbu ga jama shite’ru n’da yo                                                                                                                   | A dry throat, a hurting heart–all these human things are getting in my way                                                                                                                                                                             |
-| さよならの速さで顔を上げて、<br><br>いつかやっと夜が明けたら<br><br>もう眼を覚まして 見て<br><br>寝ぼけまなこの君を何度だって描いているから             | sayonara no hayasa de kao o agete<br><br>itsuka yatto yo ga aketara<br><br>mou me o samashite mite<br><br>neboke manako no kimi o nando datte egaite iru kara                                          | Lift your head at the speed of the farewell<br><br>Someday dawn will finally break<br><br>Come on, try and open your eyes<br><br>Because I’ve pictured your sleepy eyes so many times                                                                  |
-| 傘を出してやっと外に出てみようと決めたはいいけど、靴を捨てたんだっけ<br><br>裸足のままなんて度胸もある訳がない<br><br>や<br><br>どうでもいいかな 何がしたいんだろう | kasa o dashite yatto soto ni dete miyou to kimeta wa ii kedo, kutsu o sute’ta n’dakke<br><br>hadashi no mama nante dokyou mo aru wake ga nai<br><br>ya<br><br>dou demo ii ka na nani ga shitai n’darou | I finally decided to take an umbrella and go out anyway, which was good, but I think I might’ve thrown away my shoes<br><br>And it’s not like I’ve got the courage to go barefoot<br><br>So…<br><br>I guess I don’t really care? What do I want to do? |
-| 夕飯はどうしよう<br><br>晴れたら外に出よう<br><br>人間なんてさ見たくもないけど                                                | yuuhan wa doushiyou<br><br>haretara soto ni deyou<br><br>ningen nante sa mitaku mo nai kedo                                                                                                            | What should I do for dinner?<br><br>If the rain lets up, I’ll go out<br><br>Even though I don’t really want to see people                                                                                                                              |
-| このままの速さで今日を泳いで、<br><br>君にやっと手が触れたら<br><br>もう目を覚まして 見て<br><br>寝ぼけまなこの君を忘れたって覚えているから             | kono mama no hayasa de kyou o oyoide,<br><br>kimi ni yatto te ga furetara<br><br>mou me o samashite mite<br><br>neboke manako no kimi o wasuretatte oboete iru kara                                    | At this speed I swim through today,<br><br>And if my hand finally touches you…<br><br>Come on, try and open your eyes<br><br>Because I remember you and your sleepy eyes, even though I’ve forgotten them                                              |
-| 丘の前には君がいて随分久しいねって笑いながら顔を寄せて<br><br>さぁ、二人で行こうって言うんだ                                             | oka no mae ni wa kimi ga ite zuibun hisashii ne tte warainagara kao o yosete<br><br>saa, futari de ikou tte iu n’da                                                                                    | There you are by the hill, laughing, “It’s been so long, hasn’t it?” as you bring your face close to mine<br><br>“Let’s go together,” you say                                                                                                          |
-| ラップランドの納屋の下<br><br>ガムラスタンの古通り<br><br>夏草が邪魔をする                                                  | RAPPURANDO no naya no shita<br><br>GAMURASUTAN no furudoori<br><br>natsukusa ga jama o suru                                                                                                            | Under a barn in Lappland<br><br>On the old streets of Gamla Stan<br><br>The summer grass is getting in my way                                                                                                                                          |
-| このままの速さで今日を泳いで、<br><br>君にやっと手が触れたら<br><br>もう眼を覚まして<br><br>見て、君を忘れた僕を                           | kono mama no hayasa de kyou o oyoide,<br><br>kimi ni yatto te ga furetara<br><br>mou me o samashite<br><br>mite, kimi o wasureta boku o                                                                | At this speed I swim through today,<br><br>And if my hand finally touches you…<br><br>Come on, open your eyes<br><br>And see that I’ve forgotten you                                                                                                   |
-| さよならの速さで顔を上げて<br><br>いつかやっと夜が明けたら<br><br>もう目を覚まして<br><br>見て、寝ぼけまなこの君を何度だって描いているから              | sayonara no hayasa de kao o agete<br><br>itsuka yatto yo ga aketara<br><br>mou me o samashite<br><br>mite, neboke manako no kimi o nando datte egaite iru kara                                         | Lift your head at the speed of the farewell<br><br>Someday dawn will finally break<br><br>Come on, open your eyes<br><br>And see that I’ve drawn pictures of your sleepy eyes so many times                                                            |
+| Japanese                                                                                       | Romanji                                                                                                                                                                                                | [EJ/bluepenguin](https://ejtranslations.wordpress.com/2019/12/12/yorushika-nautilus/)                                                                                                                                                                  | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                                     |
+| ---------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 時計が鳴ったからやっと眼を覚ました<br><br>昨日の風邪がちょっと嘘みたいだ<br><br>出かけようにも、あぁ、予報が雨模様だ<br><br>どうせ出ないのは夜が明けないから     | tokei ga natta kara yatto me o samashita<br><br>kinou no kaze ga chotto uso mitai da<br><br>dekakeyou ni mo, aa, yohou ga amemoyou da<br><br>douse denai no wa yoru ga akenai kara                     | When the alarm clock rang, I finally woke up<br><br>The flu I had yesterday doesn’t seem real anymore<br><br>I think of going out, but, ah, the forecast says it looks like rain<br><br>Well, I couldn’t go anyway because it’s still dark             | Chuông báo thức reo, cuối cùng tớ cũng tỉnh dậy<br><br>Trận ốm hôm qua cứ như đùa vậy<br><br>Đang định ra ngoài thì, ah.. dự báo nói trời sẽ mưa<br><br>Thôi đằng nào tớ cũng không ra ngoài, vì trời còn chẳng chịu sáng |
+| 喉が渇くとか、心が痛いとか、人間の全部が邪魔してるんだよ                                                                   | nodo ga kawaku to ka, kokoro ga itai to ka, ningen no zenbu ga jama shite’ru n’da yo                                                                                                                   | A dry throat, a hurting heart–all these human things are getting in my way                                                                                                                                                                             | Hết khát nước lại đến đau tim<br>Cơ thể con người thật là phiền phức mà                                                                                                                                                   |
+| さよならの速さで顔を上げて、<br><br>いつかやっと夜が明けたら<br><br>もう眼を覚まして 見て<br><br>寝ぼけまなこの君を何度だって描いているから             | sayonara no hayasa de kao o agete<br><br>itsuka yatto yo ga aketara<br><br>mou me o samashite mite<br><br>neboke manako no kimi o nando datte egaite iru kara                                          | Lift your head at the speed of the farewell<br><br>Someday dawn will finally break<br><br>Come on, try and open your eyes<br><br>Because I’ve pictured your sleepy eyes so many times                                                                  | Cậu ngẩng đầu lên đi, với tốc độ của lời tạm biệt<br><br>Khi màn đêm cuối cùng cũng qua đi<br><br>Cậu hãy tỉnh dậy mà nhìn đi<br><br>Hình ảnh cậu với đôi mắt còn mơ ngủ, tớ sẽ mãi khắc họa nó                           |
+| 傘を出してやっと外に出てみようと決めたはいいけど、靴を捨てたんだっけ<br><br>裸足のままなんて度胸もある訳がない<br><br>や<br><br>どうでもいいかな 何がしたいんだろう | kasa o dashite yatto soto ni dete miyou to kimeta wa ii kedo, kutsu o sute’ta n’dakke<br><br>hadashi no mama nante dokyou mo aru wake ga nai<br><br>ya<br><br>dou demo ii ka na nani ga shitai n’darou | I finally decided to take an umbrella and go out anyway, which was good, but I think I might’ve thrown away my shoes<br><br>And it’s not like I’ve got the courage to go barefoot<br><br>So…<br><br>I guess I don’t really care? What do I want to do? | Tớ rút ô ra, cuối cùng cũng quyết định đi ra ngoài<br><br>Nhưng hình như tớ vứt giày đi rồi?<br><br>Tớ không đủ dũng cảm ra ngoài với chân trần đâu<br><br>Thôi sao cũng được, rốt cuộc tớ muốn làm gì đây?               |
+| 夕飯はどうしよう<br><br>晴れたら外に出よう<br><br>人間なんてさ見たくもないけど                                                | yuuhan wa doushiyou<br><br>haretara soto ni deyou<br><br>ningen nante sa mitaku mo nai kedo                                                                                                            | What should I do for dinner?<br><br>If the rain lets up, I’ll go out<br><br>Even though I don’t really want to see people                                                                                                                              | Bữa tối nay nên ăn gì đây?<br><br>Trời tạnh mưa tớ sẽ đi ra ngoài<br><br>Mặc dù tớ chẳng thích nhìn dòng người đâu                                                                                                        |
+| このままの速さで今日を泳いで、<br><br>君にやっと手が触れたら<br><br>もう目を覚まして 見て<br><br>寝ぼけまなこの君を忘れたって覚えているから             | kono mama no hayasa de kyou o oyoide,<br><br>kimi ni yatto te ga furetara<br><br>mou me o samashite mite<br><br>neboke manako no kimi o wasuretatte oboete iru kara                                    | At this speed I swim through today,<br><br>And if my hand finally touches you…<br><br>Come on, try and open your eyes<br><br>Because I remember you and your sleepy eyes, even though I’ve forgotten them                                              | Tớ sẽ cứ với tốc độ này mà bơi qua ngày hôm nay<br><br>Đến khi tớ chạm được đến cậu<br><br>Thì cậu hãy mở mắt và nhìn đi<br><br>Vì tớ biết rằng tớ đã quên đi cậu với đôi mắt còn mơ ngủ rồi                              |
+| 丘の前には君がいて随分久しいねって笑いながら顔を寄せて<br><br>さぁ、二人で行こうって言うんだ                                             | oka no mae ni wa kimi ga ite zuibun hisashii ne tte warainagara kao o yosete<br><br>saa, futari de ikou tte iu n’da                                                                                    | There you are by the hill, laughing, “It’s been so long, hasn’t it?” as you bring your face close to mine<br><br>“Let’s go together,” you say                                                                                                          | Phía trước ngọn đồi cậu xuất hiện<br>Chúng ta đến bên nhau, "Lâu rồi không gặp nhỉ?"<br><br>Và tớ nói rằng, "Nào, chúng ta đi thôi"                                                                                       |
+| ラップランドの納屋の下<br><br>ガムラスタンの古通り<br><br>夏草が邪魔をする                                                  | RAPPURANDO no naya no shita<br><br>GAMURASUTAN no furudoori<br><br>natsukusa ga jama o suru                                                                                                            | Under a barn in Lappland<br><br>On the old streets of Gamla Stan<br><br>The summer grass is getting in my way                                                                                                                                          | Phía dưới chiếc lán ở Lappland<br><br>Con đường cũ kĩ ở Gamla Stan<br><br>Đồng cỏ mùa hè thật phiền phức mà                                                                                                               |
+| このままの速さで今日を泳いで、<br><br>君にやっと手が触れたら<br><br>もう眼を覚まして<br><br>見て、君を忘れた僕を                           | kono mama no hayasa de kyou o oyoide,<br><br>kimi ni yatto te ga furetara<br><br>mou me o samashite<br><br>mite, kimi o wasureta boku o                                                                | At this speed I swim through today,<br><br>And if my hand finally touches you…<br><br>Come on, open your eyes<br><br>And see that I’ve forgotten you                                                                                                   | Tớ sẽ cứ với tốc độ này mà bơi qua ngày hôm nay<br><br>Đến khi tớ chạm được đến cậu<br><br>Thì cậu hãy mở mắt và nhìn đi<br><br>Nhìn tớ này, tớ đã quên cậu rồi<br>                                                       |
+| さよならの速さで顔を上げて<br><br>いつかやっと夜が明けたら<br><br>もう目を覚まして<br><br>見て、寝ぼけまなこの君を何度だって描いているから              | sayonara no hayasa de kao o agete<br><br>itsuka yatto yo ga aketara<br><br>mou me o samashite<br><br>mite, neboke manako no kimi o nando datte egaite iru kara                                         | Lift your head at the speed of the farewell<br><br>Someday dawn will finally break<br><br>Come on, open your eyes<br><br>And see that I’ve drawn pictures of your sleepy eyes so many times                                                            | Cậu ngẩng đầu lên đi, với tốc độc của lời tạm biệt<br><br>Khi màn đêm cuối cùng cũng qua đi<br><br>Cậu hãy tỉnh dậy và nhìn đi<br><br>Hình ảnh cậu với đôi mắt còn mơ ngủ, tớ sẽ mãi khắc họa nó                          |
 ##### Notes
 >Another translation can be found [here](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)(by Glens / Night Deer Translations)
