--- a/(2019) Elma/02. Just Sorrow.md
+++ b/(2019) Elma/02. Just Sorrow.md
@@ -1,21 +1,21 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-憂一乗 | Yuu Ichijou
+憂一乗 | Yuu Ichijou | Duy nhất một nỗi buồn [[#^1]]
 #### Lyrics
 
-| Japanese                                                                                                                         | Romanji                                                                                                                                                                                                                                             | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                                                                                                                           |
-| -------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 湖の底にいるみたいだ<br><br>呼吸の一つが喉に絡んだ<br><br>気泡を吐き出して数秒、やっと足が着いた<br><br>柔らかな泡の感触がした                                                      | Mizuumi no soko ni iru mitai da<br><br>Kokyū no hitotsu ga nodo ni karanda<br><br>Kihō o hakidashite sū byō, yatto ashi ga tsuita<br><br>Yawarakana doro no kanshoku ga shita                                                                       | I think I’m at the bottom of a river<br><br>A single breath constricts my throat <br><br>Watching the air escape my mouth for a few seconds, my feet finally touched the ground<br><br>I felt the gentle bubbles                                                                                                                                                                                                                     |
-| ずっとずっとずっとずっとずっと<br><br>君を追っているだけで                                                                                                | Zutto zutto zutto zutto zutto<br><br>Kimi o otteiru dake de                                                                                                                                                                                         | For a long time now<br><br>Just by chasing after you                                                                                                                                                                                                                                                                                                                                                                                 |
-| どうしようもないことばかり言いたかった<br><br>睡蓮が浮いていた  水圧で透明だ<br><br>もう蜃気楼よりも確かならそれでいいよ<br><br>適当でもいいから<br>目的とかいいから<br><br>このまま何処でもいいからさ、逃げよう      | Dō shiyō mo nai koto bakari iitakatta<br><br>Suiren ga uiteita suiatsu de tōmei da<br><br>Mō shinkirō yori mo tashika nara sorede ii yo<br><br>Tekitō demo ii kara mokuteki toka ii kara<br><br>Kono mama doko demo ii kara sa, nigeyou             | I’ve wanted to talk only about things beyond my control<br><br>The water lilies floated along the water, transparent<br><br>If it's only a little more certain than a mirage already, that’d be great<br><br>I’d be fine if you did the bare minimum<br>I’d be fine if it was something we aimed for<br><br>At this rate, I’d be fine with going anywhere, so let’s run away                                                         |
-| 湖の底にいるみたいだ<br><br>濡れる鼓膜がくすぐったいんだ<br><br>期待も将来も明日も何も聞きたくなかった<br><br>口から溢れる泡ぶくが綺麗で                                                 | Mizuumi no soko ni iru mitai da<br><br>Nureru komaku ga kusuguttai n da<br><br>Kitai mo shōrai mo asu mo nani mo kikitakunakatta<br><br>Kuchi kara afureru awa buku ga kirei de                                                                     | I think I’m at the bottom of a river <br><br>My wet eardrums feel ticklish<br><br>I didn’t want to ask about hopes, the future, tomorrow, or anything really <br><br>Those questions died quickly just by seeing the beauty of the bubbles escaping my mouth                                                                                                                                                                         |
-| ずっとずっとずっとずっとずっと<br><br>見惚れてしまったんだけで                                                                                              | Zutto zutto zutto zutto zutto<br><br>Mihoreteshimatta dake de                                                                                                                                                                                       | For a long time now<br><br>Just by being enchanted by it                                                                                                                                                                                                                                                                                                                                                                             |
-| 心よりも大事なものを見つけたかった<br><br>言葉って薄情だ  水圧で透明だ<br><br>なぁ、建前より綺麗なものを探してるんだ<br><br>そんなの忘れていいからもう、逃げよう                                    | Kokoro yori daijina mono o mitsuketakatta<br><br>Kotoba tte hakujō da suiatsu de tōmei da<br><br>Naa, tatemae yori kireina mono o sagashiteru n da<br><br>Sonna no wasurete ii kara mō, nigeyou                                                     | I wanted to find something more important than my heart<br><br>Words are cruel, above the water they seem transparent<br><br>Hey, I’m looking for something prettier than how to act properly<br><br>It’s fine to forget about it though, so let’s run away                                                                                                                                                                          |
-| こんな自分ならいらない<br><br>僕には何もいらない                                                                                                     | Konna jibun nara iranai<br><br>Boku ni wa nani ni mo iranai                                                                                                                                                                                         | I don’t need this self of mine<br><br>I don’t need anything                                                                                                                                                                                                                                                                                                                                                                          |
-| お金も名声も愛も称賛も何もいらない<br><br>このまま遠くに行きたい<br><br>思い出の外に触りたい<br><br>また君の歌が聴きたい                                                         | Okane mo meisei mo ai mo shōsan mo nan ni mo iranai<br><br>Kono mama tōku ni ikitai<br><br>Omoide no soto ni sawaritai<br><br>Mata kimi no uta ga kikitai                                                                                           | I don’t need money, or fame, or love, or recognition — nothing <br><br>I want to go far away right now,<br><br>Touch the outside of these memories,<br><br>And listen to your songs once more                                                                                                                                                                                                                                        |
-| ずっとずっとずっとずっとずっと<br><br>君を追っているだけで                                                                                                | Zutto zutto zutto zutto zutto<br><br>Kimi o otteiru dake de                                                                                                                                                                                         | For a long time now<br><br>Just by chasing after you                                                                                                                                                                                                                                                                                                                                                                                 |
-| どうしようもないことだけ歌いたかった<br><br>睡蓮が浮いていた  水圧で透明だ<br><br>もう蜃気楼よりも確かならそれでいいよ<br><br>このまま何処でもいいからさ、                                       | Dō shiyō mo nai koto dake utaitakatta<br><br>Suiren ga uiteita suiatsu de tōmei da<br><br>Mō shinkirō yori mo tashika nara sorede ii yo<br><br>Kono mama doko demo ii kara sa,                                                                      | I’ve wanted to sing only about things I can’t control<br><br>The water lilies floated along the water, looking transparent<br><br>If it's only a little more certain than a mirage already, that’d be great <br><br>At this rate, I’d be fine with going anywhere                                                                                                                                                                    |
-| 本当は全部置いてただ逃げ出したいだけだった<br><br>人生は透明だ   水圧で透明だ<br><br>もう蜃気楼よりも確かならそれでいいよ<br><br>適当でもいいから<br><br>目的とかいいから<br><br>このまま何処でもいいからさ、逃げよう | Hontō wa zenbu oite tada nigedashitai dake datta<br><br>Jinsei wa tōmei da suiatsu de tōmei da<br><br>Mō shinkirō yori mo tashika nara sorede ii yo<br><br>Tekitō demo ii kara mokuteki toka ii kara<br><br>Kono mama doko demo ii kara sa, nigeyou | The truth is that I’ve only been wanting to leave everything behind and run away <br><br>This life is transparent, above the water, seemingly transparent <br><br>I’ve had enough. If it’s only a little more certain than a mirage, I’d be fine with it <br><br>I’d be fine if you did the bare minimum<br><br>I’d be fine if it was something we aimed for<br><br>At this rate, I’d be fine with going anywhere, so let’s run away |
+| Japanese                                                                                                                         | Romanji                                                                                                                                                                                                                                             | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                                                                                                                           | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                                                                                                                                    |
+| -------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| 湖の底にいるみたいだ<br><br>呼吸の一つが喉に絡んだ<br><br>気泡を吐き出して数秒、やっと足が着いた<br><br>柔らかな泡の感触がした                                                      | Mizuumi no soko ni iru mitai da<br><br>Kokyū no hitotsu ga nodo ni karanda<br><br>Kihō o hakidashite sū byō, yatto ashi ga tsuita<br><br>Yawarakana doro no kanshoku ga shita                                                                       | I think I’m at the bottom of a river<br><br>A single breath constricts my throat <br><br>Watching the air escape my mouth for a few seconds, my feet finally touched the ground<br><br>I felt the gentle bubbles                                                                                                                                                                                                                     | Như thể đang ở dưới đáy hồ<br><br>Hơi thở của tớ tắc lại trong cổ họng<br><br>Thổi ra bọt khí, vài giây sau chân tớ đã chạm xuống<br><br>Bùn đất dưới chân cảm giác thật mềm mại                                                                                                                                         |
+| ずっとずっとずっとずっとずっと<br><br>君を追っているだけで                                                                                                | Zutto zutto zutto zutto zutto<br><br>Kimi o otteiru dake de                                                                                                                                                                                         | For a long time now<br><br>Just by chasing after you                                                                                                                                                                                                                                                                                                                                                                                 | Cứ mải miết, mải miết, mải miết rồi lại mải miết<br><br>Chỉ đuổi theo cậu thôi…                                                                                                                                                                                                                                          |
+| どうしようもないことばかり言いたかった<br><br>睡蓮が浮いていた  水圧で透明だ<br><br>もう蜃気楼よりも確かならそれでいいよ<br><br>適当でもいいから<br>目的とかいいから<br><br>このまま何処でもいいからさ、逃げよう      | Dō shiyō mo nai koto bakari iitakatta<br><br>Suiren ga uiteita suiatsu de tōmei da<br><br>Mō shinkirō yori mo tashika nara sorede ii yo<br><br>Tekitō demo ii kara mokuteki toka ii kara<br><br>Kono mama doko demo ii kara sa, nigeyou             | I’ve wanted to talk only about things beyond my control<br><br>The water lilies floated along the water, transparent<br><br>If it's only a little more certain than a mirage already, that’d be great<br><br>I’d be fine if you did the bare minimum<br>I’d be fine if it was something we aimed for<br><br>At this rate, I’d be fine with going anywhere, so let’s run away                                                         | Vậy mà những điều tớ muốn nói ra chỉ tồn những thứ bất lực<br><br>Hoa súng nổi lên mặt nước, trong suốt dưới áp lực nước<br><br>Nhưng nếu nó vẫn còn rõ ràng hơn cả ảo ảnh thì cũng không sao hết<br><br>Kệ đi thôi, mục đích gì đó tớ cũng không quan tâm<br><br>Cứ thế này thì đi đến đâu cũng được, hãy chạy đi thôi. |
+| 湖の底にいるみたいだ<br><br>濡れる鼓膜がくすぐったいんだ<br><br>期待も将来も明日も何も聞きたくなかった<br><br>口から溢れる泡ぶくが綺麗で                                                 | Mizuumi no soko ni iru mitai da<br><br>Nureru komaku ga kusuguttai n da<br><br>Kitai mo shōrai mo asu mo nani mo kikitakunakatta<br><br>Kuchi kara afureru awa buku ga kirei de                                                                     | I think I’m at the bottom of a river <br><br>My wet eardrums feel ticklish<br><br>I didn’t want to ask about hopes, the future, tomorrow, or anything really <br><br>Those questions died quickly just by seeing the beauty of the bubbles escaping my mouth                                                                                                                                                                         | Như thể đang ở dưới đáy hồ vậy<br><br>Màng nhĩ rỉ nước ra sao nhột quá<br><br>Kỳ vọng, rồi tương lai, rồi ngày mai, tớ không còn muốn nghe gì nữa<br><br>Bong bóng thổi ra từ miệng thật đẹp đẽ                                                                                                                          |
+| ずっとずっとずっとずっとずっと<br><br>見惚れてしまったんだけで                                                                                              | Zutto zutto zutto zutto zutto<br><br>Mihoreteshimatta dake de                                                                                                                                                                                       | For a long time now<br><br>Just by being enchanted by it                                                                                                                                                                                                                                                                                                                                                                             | Cứ mải miết, mải miết, mải miết rồi lại mải miết<br><br>Chỉ ngắm nhìn mà thôi…                                                                                                                                                                                                                                           |
+| 心よりも大事なものを見つけたかった<br><br>言葉って薄情だ  水圧で透明だ<br><br>なぁ、建前より綺麗なものを探してるんだ<br><br>そんなの忘れていいからもう、逃げよう                                    | Kokoro yori daijina mono o mitsuketakatta<br><br>Kotoba tte hakujō da suiatsu de tōmei da<br><br>Naa, tatemae yori kireina mono o sagashiteru n da<br><br>Sonna no wasurete ii kara mō, nigeyou                                                     | I wanted to find something more important than my heart<br><br>Words are cruel, above the water they seem transparent<br><br>Hey, I’m looking for something prettier than how to act properly<br><br>It’s fine to forget about it though, so let’s run away                                                                                                                                                                          | Nhưng tớ muốn tìm được điều gì đó quan trọng hơn trái tim<br><br>Lời nói thật là bạc bẽo, trong suốt dưới áp lực nước<br><br>Này cậu, tớ vẫn đang kiếm tìm một thứ gì đó đẹp đẽ hơn cả sự dối lòng<br><br>Mà những chuyện đó quên đi cũng được, hãy chạy đi thôi                                                         |
+| こんな自分ならいらない<br><br>僕には何もいらない                                                                                                     | Konna jibun nara iranai<br><br>Boku ni wa nani ni mo iranai                                                                                                                                                                                         | I don’t need this self of mine<br><br>I don’t need anything                                                                                                                                                                                                                                                                                                                                                                          | Con người này tớ không cần nữa,<br><br>tớ không cần bất cứ điều gì nữa                                                                                                                                                                                                                                                   |
+| お金も名声も愛も称賛も何もいらない<br><br>このまま遠くに行きたい<br><br>思い出の外に触りたい<br><br>また君の歌が聴きたい                                                         | Okane mo meisei mo ai mo shōsan mo nan ni mo iranai<br><br>Kono mama tōku ni ikitai<br><br>Omoide no soto ni sawaritai<br><br>Mata kimi no uta ga kikitai                                                                                           | I don’t need money, or fame, or love, or recognition — nothing <br><br>I want to go far away right now,<br><br>Touch the outside of these memories,<br><br>And listen to your songs once more                                                                                                                                                                                                                                        | Tiền bạc, danh tiếng, tình yêu, tán dương, tớ không cần gì hết<br><br>Tớ muốn cứ thế này chạy đi thật xa,<br><br>tớ muốn chạm vào bên ngoài vùng ký ức<br><br>Và tớ muốn nghe những bài hát của cậu                                                                                                                      |
+| ずっとずっとずっとずっとずっと<br><br>君を追っているだけで                                                                                                | Zutto zutto zutto zutto zutto<br><br>Kimi o otteiru dake de                                                                                                                                                                                         | For a long time now<br><br>Just by chasing after you                                                                                                                                                                                                                                                                                                                                                                                 | Cứ mải miết, mải miết, mải miết rồi lại mải miết<br><br>Chỉ đuổi theo cậu thôi…                                                                                                                                                                                                                                          |
+| どうしようもないことだけ歌いたかった<br><br>睡蓮が浮いていた  水圧で透明だ<br><br>もう蜃気楼よりも確かならそれでいいよ<br><br>このまま何処でもいいからさ、                                       | Dō shiyō mo nai koto dake utaitakatta<br><br>Suiren ga uiteita suiatsu de tōmei da<br><br>Mō shinkirō yori mo tashika nara sorede ii yo<br><br>Kono mama doko demo ii kara sa,                                                                      | I’ve wanted to sing only about things I can’t control<br><br>The water lilies floated along the water, looking transparent<br><br>If it's only a little more certain than a mirage already, that’d be great <br><br>At this rate, I’d be fine with going anywhere                                                                                                                                                                    | Tớ chỉ muốn hát về những điều khiến tớ bất lực<br><br>Hoa súng nổi lên mặt nước, trong suốt dưới áp lực nước<br><br>Nhưng nếu nó vẫn còn rõ ràng hơn cả ảo ảnh thì cũng không sao hết<br><br>Cứ như này đến đâu cũng được,                                                                                               |
+| 本当は全部置いてただ逃げ出したいだけだった<br><br>人生は透明だ   水圧で透明だ<br><br>もう蜃気楼よりも確かならそれでいいよ<br><br>適当でもいいから<br><br>目的とかいいから<br><br>このまま何処でもいいからさ、逃げよう | Hontō wa zenbu oite tada nigedashitai dake datta<br><br>Jinsei wa tōmei da suiatsu de tōmei da<br><br>Mō shinkirō yori mo tashika nara sorede ii yo<br><br>Tekitō demo ii kara mokuteki toka ii kara<br><br>Kono mama doko demo ii kara sa, nigeyou | The truth is that I’ve only been wanting to leave everything behind and run away <br><br>This life is transparent, above the water, seemingly transparent <br><br>I’ve had enough. If it’s only a little more certain than a mirage, I’d be fine with it <br><br>I’d be fine if you did the bare minimum<br><br>I’d be fine if it was something we aimed for<br><br>At this rate, I’d be fine with going anywhere, so let’s run away | Thật ra tớ chỉ muốn bỏ lại hết và chạy đi thôi<br><br>Cuộc đời thật trong suốt, trong suốt dưới áp lực nước<br><br>Nhưng nếu nó vẫn còn rõ ràng hơn cả ảo ảnh thì cũng không sao hết<br><br>Kệ đi thôi, mục đích gì đó tớ cũng không quan tâm<br><br>Cứ thế này thì đi đến đâu cũng được, hãy chạy đi thôi.              |
 ##### Notes
->
+> Chú thích: Bài hát này Elma tự tưởng tượng mình như đang ở dưới đáy hồ và tả lại cảm giác ngột ngạt dưới đó, và từ dưới đáy hồ cô nhìn thấy những thứ trong suốt, mỏng manh, nhưng lại nói rằng “nếu nó rõ ràng hơn cả ảo ảnh (của Amy) thì thà để nguyên như vậy còn hơn, vì cái chết vẫn còn nhẹ nhàng hơn so với việc phải đối diện với ảo ảnh đó. ^1
