--- a/(2019) Elma/03. Evening Calm, Some Place, Fireworks.md
+++ b/(2019) Elma/03. Evening Calm, Some Place, Fireworks.md
@@ -1,19 +1,19 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-夕凪、某、花惑い | Yuunagi, Nanigashi, Hanamadoi
+夕凪、某、花惑い | Yuunagi, Nanigashi, Hanamadoi | Tịch mịch, nơi nào đó, pháo hoa
 #### Lyrics
 
-| Japanese                                                                         | Romanji                                                                                                                                                                  | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                |
-| -------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 夏になる前にこの胸に散る花火を書いた<br><br>夜が来るから明後日の方ばかりを見てる                                     | Natsu ni naru mae ni kono mune ni chiru hanabi o kaita<br><br>Yoru ga kuru kara asatte no hō bakari o miteru                                                             | I wrote about the fireworks in my heart before the seasons turned to summer<br><br>The night is about to fall, and the day after tomorrow is all that I see                                                                               |
-| 口に出してもう1回<br><br>八月某日を思い出して<br><br>僕には言い足りないことばかりだ                               | Kuchi ni dashite mō ikkai<br><br>Hachigatsu bō jitsu o omoidashite<br><br>Boku ni wa ii tarinai koto bakari da                                                           | I’ll say it one more time<br><br>I’ll recall that one August day<br><br>They’re the only things I can never speak enough of                                                                                                               |
-| ギターを鳴らして二小節  <br><br>この歌の歌詞は380字<br><br>ロックンロールを書いた    <br><br>あの夏ばっか歌っていた       | Gita- o narashite ni shōsetsu<br><br>Kono uta no kashi wa sanbyaku hachijuu ji<br><br>Rokkunro-ru o kaita<br><br>Ano natsu bakka utatteita                               | The two measures ring out from my guitar<br><br>This song is 380 characters long<br><br>I wrote rock and roll songs<br><br>And only sang of that summer                                                                                   |
-| さようならだけじゃ足りない<br><br>君に茜差す日々の歌を<br><br>思い出すだけじゃ足りないのさ<br><br>花泳ぐ、夏を待つ、君は言葉になる    | Sayonara dake ja tarinai<br><br>Kimi ni akane sasu hibi no uta o<br><br>Omoidasu dake ja tarinai no sa<br><br>Hana oyogu natsu o matsu<br>Kimi wa kotoba ni naru         | “Goodbye” alone is not enough<br><br>I want to sing of glowing red days to you<br><br>Just remembering will never be enough<br><br>I wait for a summer with swimming flowers, and you turn into words                                     |
-| 忘れないようにあの夏に見た花火を書いた<br><br>想い出の僕ら、夜しか見えぬ幽霊みたいだ                                   | Wasurenai yōni ano natsu ni mita hanabi o kaita<br><br>Omoide no bokura, yoru shika mienu yūrei mitai da                                                                 | I wrote of the fireworks in that summer so I wouldn’t forget<br><br>The us in my memories are like ghosts you can’t see anytime but at night                                                                                              |
-| 何もいいことないんだ<br><br>この世は僕には難解だった<br><br>君が教えなかったことばかりだ                             | Nan ni mo ii koto nai n da<br><br>Konoyo wa boku ni wa nankai datta<br><br>Kimi ga oshienakatta koto bakari da                                                           | There’s nothing good left<br><br>This world was difficult for me to understand<br><br>It’s just full of things you never taught me                                                                                                        |
-| ピアノを弾いてたホール<br><br>あのカフェももう無いんだ<br><br>僕らを貶す奴らを殺したい<br><br>君ならきっと笑ってくれる          | Piano o hiiteta ho-ru<br><br>Ano kafe mo mō nai n da<br><br>Bokura o kenasu yatsura o koroshitai<br><br>Kimi nara kitto warattekureru                                    | We played piano in that hall<br><br>That cafe doesn’t exist anymore<br><br>I want to kill the two we talked so badly about<br><br>If you were here, you’d definitely laugh at that                                                        |
-| このままじゃまだ足りない<br><br>僕ら花惑う風の中を<br><br>思い出すほどに苦しいのさ<br><br>夏が来る夢を見る<br><br>心に穴が空く  | Kono mama ja mada tarinai<br><br>Bokura hana madou kaze no naka o<br><br>Omoidasu hodo ni kurushii no sa<br><br>Natsu ga kuru yume o miru<br><br>Kokoro ni ana ga aku    | How things are now still isn’t enough<br><br>I want us to be lost in a breeze obfuscated by flowers<br><br>The mere act of remembering is painful<br><br>I dream that summer will come<br><br>And with that, a hole opened up in my heart |
-| 唄歌うだけじゃ足りない<br><br>君に茜差す日々の歌を<br><br>美しい夜が知りたいのだ<br><br>花惑う夏を待つ <br><br>僕に差す月明かり | Uta utau dake ja tarinai<br><br>Kimi ni akane sasu hibi no uta o<br><br>Utsukushii yoru ga shiritai no da<br><br>Hana madou natsu o matsu<br><br>boku ni sasu tsukiakari | Singing songs alone won’t be enough <br><br>I want to sing of glowing red days to you<br><br>I want to know what a beautiful night is like<br><br>I wait for a summer of fireworks<br><br>I am illuminated by the moonlight               |
+| Japanese                                                                         | Romanji                                                                                                                                                                  | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                                                       |
+| -------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 夏になる前にこの胸に散る花火を書いた<br><br>夜が来るから明後日の方ばかりを見てる                                     | Natsu ni naru mae ni kono mune ni chiru hanabi o kaita<br><br>Yoru ga kuru kara asatte no hō bakari o miteru                                                             | I wrote about the fireworks in my heart before the seasons turned to summer<br><br>The night is about to fall, and the day after tomorrow is all that I see                                                                               | Trước khi mùa hè đến, tớ đã khắc ghi vào trái tim những bông pháo hoa rơi xuống<br><br>Màn đêm sẽ buông xuống, nên tớ chỉ mong chờ đến ngày kia                                                                                             |
+| 口に出してもう1回<br><br>八月某日を思い出して<br><br>僕には言い足りないことばかりだ                               | Kuchi ni dashite mō ikkai<br><br>Hachigatsu bō jitsu o omoidashite<br><br>Boku ni wa ii tarinai koto bakari da                                                           | I’ll say it one more time<br><br>I’ll recall that one August day<br><br>They’re the only things I can never speak enough of                                                                                                               | Hãy nói một lần nữa đi, hãy nhớ lại ngày ấy trong tháng 8 đi<br><br>Trong tớ chỉ tồn những điều nói không bao giờ là đủ                                                                                                                     |
+| ギターを鳴らして二小節  <br><br>この歌の歌詞は380字<br><br>ロックンロールを書いた    <br><br>あの夏ばっか歌っていた       | Gita- o narashite ni shōsetsu<br><br>Kono uta no kashi wa sanbyaku hachijuu ji<br><br>Rokkunro-ru o kaita<br><br>Ano natsu bakka utatteita                               | The two measures ring out from my guitar<br><br>This song is 380 characters long<br><br>I wrote rock and roll songs<br><br>And only sang of that summer                                                                                   | Gảy ghita theo nhịp hai, lời bài hát này có 380 chữ<br><br>Tớ đặt bút viết rock and roll, tớ chỉ toàn hát về mùa hè năm đó                                                                                                                  |
+| さようならだけじゃ足りない<br><br>君に茜差す日々の歌を<br><br>思い出すだけじゃ足りないのさ<br><br>花泳ぐ、夏を待つ、君は言葉になる    | Sayonara dake ja tarinai<br><br>Kimi ni akane sasu hibi no uta o<br><br>Omoidasu dake ja tarinai no sa<br><br>Hana oyogu natsu o matsu<br>Kimi wa kotoba ni naru         | “Goodbye” alone is not enough<br><br>I want to sing of glowing red days to you<br><br>Just remembering will never be enough<br><br>I wait for a summer with swimming flowers, and you turn into words                                     | Chỉ tạm biệt thôi thì không đủ<br><br>Chỉ nhớ về những khúc ca viết trong những ngày hắt lên mình cậu màu hoàng hôn đỏ thẫm thôi thì không đủ<br><br>Cánh hoa trôi đi, tớ mong chờ mùa hạ, còn cậu thì hóa thành ngôn từ                    |
+| 忘れないようにあの夏に見た花火を書いた<br><br>想い出の僕ら、夜しか見えぬ幽霊みたいだ                                   | Wasurenai yōni ano natsu ni mita hanabi o kaita<br><br>Omoide no bokura, yoru shika mienu yūrei mitai da                                                                 | I wrote of the fireworks in that summer so I wouldn’t forget<br><br>The us in my memories are like ghosts you can’t see anytime but at night                                                                                              | Tớ đã ghi lại bông pháo hoa mình thấy mùa hè năm đó để không quên đi<br><br>Tớ và cậu trong ký ức, giống như linh hồn chỉ có thể nhìn thấy trong màn đêm                                                                                    |
+| 何もいいことないんだ<br><br>この世は僕には難解だった<br><br>君が教えなかったことばかりだ                             | Nan ni mo ii koto nai n da<br><br>Konoyo wa boku ni wa nankai datta<br><br>Kimi ga oshienakatta koto bakari da                                                           | There’s nothing good left<br><br>This world was difficult for me to understand<br><br>It’s just full of things you never taught me                                                                                                        | Chẳng có chuyện gì là tốt đẹp cả<br><br>Thế gian này đối với tớ sao khó quá<br><br>Chỉ tồn những điều cậu chưa từng nói cho tớ biết                                                                                                         |
+| ピアノを弾いてたホール<br><br>あのカフェももう無いんだ<br><br>僕らを貶す奴らを殺したい<br><br>君ならきっと笑ってくれる          | Piano o hiiteta ho-ru<br><br>Ano kafe mo mō nai n da<br><br>Bokura o kenasu yatsura o koroshitai<br><br>Kimi nara kitto warattekureru                                    | We played piano in that hall<br><br>That cafe doesn’t exist anymore<br><br>I want to kill the two we talked so badly about<br><br>If you were here, you’d definitely laugh at that                                                        | Đại sảnh nơi chúng mình chơi piano, và cả quán café đó cũng không còn nữa<br><br>Tớ muốn kết liễu những kẻ đã xỉ vả chúng ta<br><br>Đổi lại nếu là cậu, chắc chắn cậu sẽ vui vẻ trở lại                                                     |
+| このままじゃまだ足りない<br><br>僕ら花惑う風の中を<br><br>思い出すほどに苦しいのさ<br><br>夏が来る夢を見る<br><br>心に穴が空く  | Kono mama ja mada tarinai<br><br>Bokura hana madou kaze no naka o<br><br>Omoidasu hodo ni kurushii no sa<br><br>Natsu ga kuru yume o miru<br><br>Kokoro ni ana ga aku    | How things are now still isn’t enough<br><br>I want us to be lost in a breeze obfuscated by flowers<br><br>The mere act of remembering is painful<br><br>I dream that summer will come<br><br>And with that, a hole opened up in my heart | Cứ thế này thì thật không đủ<br><br>Vì cứ mỗi lần nhớ lại chúng ta đứng trong cơn gió cuốn bay những cánh hoa là tớ lại đau nhỉ<br><br>Mùa hè đến, trong giấc mơ, trái tim tớ hổng mất một lỗ                                               |
+| 唄歌うだけじゃ足りない<br><br>君に茜差す日々の歌を<br><br>美しい夜が知りたいのだ<br><br>花惑う夏を待つ <br><br>僕に差す月明かり | Uta utau dake ja tarinai<br><br>Kimi ni akane sasu hibi no uta o<br><br>Utsukushii yoru ga shiritai no da<br><br>Hana madou natsu o matsu<br><br>boku ni sasu tsukiakari | Singing songs alone won’t be enough <br><br>I want to sing of glowing red days to you<br><br>I want to know what a beautiful night is like<br><br>I wait for a summer of fireworks<br><br>I am illuminated by the moonlight               | Chỉ hát thôi thì không đủ<br><br>Hát sao cho đủ những khúc ca trong những ngày khốc lên mình cậu sắc hoàng hôn đỏ thẫm<br><br>Vì tớ còn muốn biết đến màn đêm xinh đẹp nữa<br><br>Hoa bay trên trời, ngóng chờ mùa hè, ánh trăng soi rọi tớ |
 ##### Notes
 >
