--- a/(2019) Elma/06. Dance of God.md
+++ b/(2019) Elma/06. Dance of God.md
@@ -1,24 +1,24 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-神様のダンス | Kami-sama no Dansu
+神様のダンス | Kami-sama no Dansu | Điệu nhảy của thần linh
 #### Lyrics
 
-| Japanese                                                                                             | Romanji                                                                                                                                                                                                         | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                     |
-| ---------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 忘れるなんて酷いだろ<br><br>幸せになんてなるものか<br><br>色のない何かが咲いた<br><br>君のいない夏に咲いた                                    | wasureru nante hidoi daro<br><br>shiawase ni nante naru mono ka<br><br>iro no nao nani ka ga saita<br><br>kimi no iani natsu ni saita                                                                           | To forget is horrible right?<br><br>Will it turn into happiness? <br><br>Something devoid of colour bloomed<br><br>It bloomed in that summer without you                                                                                                                       |
-| 人に笑われたくないから<br><br>怯えるように下を向く<br><br>心より大事な何かが<br><br>あってたまるものか                                      | hito ni warawaretakunai kara<br><br>obieru yooni shita o oku<br><br>kokoro yori daiji na nani ka ga<br><br>atte tamaru mono ka                                                                                  | Not wanting people to laugh at me<br><br>I look at the ground as to scare them off<br><br>Can something more important than my heart even exist?                                                                                                                               |
-| 暮れない夕に茜追い付いて<br><br>君を染め抜いた<br><br>見えないように僕を追い越して<br><br>行かないで                                       | kurenai yuu ni akane oitsuite<br><br>kimi o somenuita<br><br>mienai yooni boku o oikoshite<br><br>ikanaide                                                                                                      | A madder red chased the ever bright evening<br><br>Neglecting to dye you<br><br>Pass by me so that you can’t see me <br><br>But please don’t go                                                                                                                                |
-| 僕たち神様なんて知らん顔<br><br>何処までだって行ける<br><br>なぁ、心まで醜い僕らだ<br><br>世界は僕らのものだ                                   | bokutachi kami-sama nante shirankao<br><br>dokomade datte ikeru<br><br>naa, kokoro made minikui bokurada<br><br>sekai wa bokura no monoda                                                                       | We who know not the face of god<br><br>Are able to go anywhere <br><br>Hey, we’re ugly to the core<br><br>But the world belongs to us                                                                                                                                          |
-| 音楽だけでいいんだろ<br><br>他人に合わせて歩くなよ<br><br>教えてくれたのはあんたじゃないか                                                | ongaku dake de ii ndaro<br><br>hito ni awasete aruku na yo<br><br>oshietekureta no wa anta janai ka                                                                                                             | It’s fine if it’s just through music right?<br><br>We don’t have to walk in step with the rest<br><br>Weren’t you the one who taught me that?                                                                                                                                  |
-| どうだっていいよ、このまま遠くへ<br><br>誰も知らない場所で月明かりを探すのだ                                                           | doodatte ii yo, kono mama toku e<br><br>daremo shiranai basho de tsukiakari o sagasu no da                                                                                                                      | It doesn’t matter to me, let’s go some place far away right now<br><br>We’ll look for the moonlight in a place unbeknownst to anyone                                                                                                                                           |
-| 名のない花が綺麗とか<br><br>どうでもいいことばっかだ<br><br>君の口癖が感染ってる<br><br>喉の真下に君がいる                                    | namonai hana ga kirei toka<br><br>doo demo ii koto bakka da<br><br>kimi no kushiguse ga utsutteru<br><br>koo no mashita ni wa kimi ga iru                                                                       | “Flowers without a name are pretty” and all that jazz<br><br>Doesn’t really matter to me <br><br>But that phrase of yours is rubbing off on me<br><br>Right below my throat is where you exist                                                                                 |
-| 言葉も人生も愛想も全て捨ててこそ音楽だ<br><br>この価値も知らないあんたに わかって 堪るものか                                                  | kotoba mo seikatsu mo aiso mo<br>subete sutete koso ongako da<br><br>sono kachi mo shirani anta ni<br>wakatte tamaru mono ka                                                                                    | Only when you’ve thrown away my words, my life, my everything, can music be made<br><br>How can you not understand what it costs?                                                                                                                                              |
-| 暮れない夕に茜追い付いて<br><br>僕を染め抜いた<br><br>いつか時間が全て追い抜いて<br><br>消えないで                                        | kurenai yuu ni akane oitsuite<br><br>boku o somenuita<br><br>itsu ka jikan ga subete oinuite<br><br>kienaide                                                                                                    | A madder red chased the ever bright evening<br><br>Neglecting to dye me<br><br>One day, time will overtake everything<br><br>But don’t disappear                                                                                                                               |
-| 僕たち神様なんて知らん顔<br><br>世界の全部が欲しい<br><br>なぁ、心まで醜いあんたの思い出全部をくれよ                                           | bokutachi kami-sama nante shirankao<br><br>sekai no zenbu ga hoshii<br><br>naa kokoro made minikui anta no, omoide zenbu o kureyo                                                                               | We, who know not the face of the gods<br><br>Want the whole world<br><br>Hey, give me your all your memories, you’re ugly to the core                                                                                                                                          |
-| 価値観だって自由なら<br><br>人を傷つけていいだろ<br><br>教えなかったのはあんたじゃないか                                                 | kachikan datte jiyuu nara<br><br>hito o kizutsukete ii daro<br><br>oshienakatta no wa anta janai ka                                                                                                             | If this world’s values aren’t set<br><br>Then it’s okay to hurt each other, right?<br><br>Weren’t you the one who didn’t teach me that?                                                                                                                                        |
-| どうだっていいよ、このまま遠くへ<br><br>誰も見てない場所で生きる真似をしているのさ<br><br>酷い顔で踊るのさ<br><br>胸も痛いままで                         | doodatte ii yo, kono mama toku e<br><br>daremo mitenai basho de ikiru mane o shiteru no sa<br><br>hidoi kao de odoru no sa<br><br>mune mo itai mama de                                                          | It doesn’t matter to me, let’s go some place far away right now<br><br>We’ll do our best imitation of living in a place no one is looking at<br><br>Dancing with ugly faces<br><br>While our chests ache                                                                       |
-| 神様僕たちなんて知らん顔<br><br>何処までだって行ける<br><br>なぁ、言葉が世界だと云うなら世界は僕らのものだ                                        | kami-sama bokutachi nante shirankao<br><br>dokomade datte ikeru<br><br>naa, kotoba ga sekai dato iunara, sekai wa bokura no monoda                                                                              | The gods, who know not our faces<br><br>Are able to go anywhere<br><br>Hey, if you say that words make up the world, then the world /is/ ours                                                                                                                                  |
-| 忘れるなんて酷いだろ<br><br>幸せになんてなれるかよ<br><br>僕を歪めたのはあんたじゃないか<br><br>そうだって僕はこのまま遠くへ<br><br>誰も知らない場所で月明かりを探すのだ | wasureru nante hidoi daro<br><br>shiawase ni nante nareru ka yo<br><br>boku o yugameta no wa anta janai ka<br><br>soo datta, boku wa kono mama toku e<br><br>daremo shiranai basho de tsukiakari o sagasu no da | To forget is horrible right?<br><br>Will we be able to become happy that way?<br><br>Aren’t you the one who made me think this way?<br><br>That may be so, but regardless I’ll go some where far away right now<br><br>And look for moonlight in a place unbeknownst to anyone |
+| Japanese                                                                                             | Romanji                                                                                                                                                                                                         | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                     | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                     |
+| ---------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 忘れるなんて酷いだろ<br><br>幸せになんてなるものか<br><br>色のない何かが咲いた<br><br>君のいない夏に咲いた                                    | wasureru nante hidoi daro<br><br>shiawase ni nante naru mono ka<br><br>iro no nao nani ka ga saita<br><br>kimi no iani natsu ni saita                                                                           | To forget is horrible right?<br><br>Will it turn into happiness? <br><br>Something devoid of colour bloomed<br><br>It bloomed in that summer without you                                                                                                                       | Quên đi thật là tàn nhẫn, quên đi thì hạnh phúc được sao?<br><br>Có thứ gì đó không màu đã nở, nở trong mùa hè không có cậu                                                                               |
+| 人に笑われたくないから<br><br>怯えるように下を向く<br><br>心より大事な何かが<br><br>あってたまるものか                                      | hito ni warawaretakunai kara<br><br>obieru yooni shita o oku<br><br>kokoro yori daiji na nani ka ga<br><br>atte tamaru mono ka                                                                                  | Not wanting people to laugh at me<br><br>I look at the ground as to scare them off<br><br>Can something more important than my heart even exist?                                                                                                                               | Tớ không muốn bị cười nhạo, nên cứ cúi mặt xuống tỏ vẻ sợ hãi<br><br>Trên đời này có thứ gì quan trọng hơn trái tim sao?                                                                                  |
+| 暮れない夕に茜追い付いて<br><br>君を染め抜いた<br><br>見えないように僕を追い越して<br><br>行かないで                                       | kurenai yuu ni akane oitsuite<br><br>kimi o somenuita<br><br>mienai yooni boku o oikoshite<br><br>ikanaide                                                                                                      | A madder red chased the ever bright evening<br><br>Neglecting to dye you<br><br>Pass by me so that you can’t see me <br><br>But please don’t go                                                                                                                                | Ánh hoàng hôn tô lên bầu trời không đêm, nhưng không tô lên hình ảnh cậu<br><br>Xin cậu đừng đi khỏi, tớ sẽ không thấy cậu được nữa.                                                                      |
+| 僕たち神様なんて知らん顔<br><br>何処までだって行ける<br><br>なぁ、心まで醜い僕らだ<br><br>世界は僕らのものだ                                   | bokutachi kami-sama nante shirankao<br><br>dokomade datte ikeru<br><br>naa, kokoro made minikui bokurada<br><br>sekai wa bokura no monoda                                                                       | We who know not the face of god<br><br>Are able to go anywhere <br><br>Hey, we’re ugly to the core<br><br>But the world belongs to us                                                                                                                                          | Chúng ta mang trên mình khuôn mặt phớt lờ thần thánh, chúng ta có thể đi đến bất cứ đâu<br><br>Chúng ta đến cả trái tim cũng xấu xí, thế giới này là của chúng ta                                         |
+| 音楽だけでいいんだろ<br><br>他人に合わせて歩くなよ<br><br>教えてくれたのはあんたじゃないか                                                | ongaku dake de ii ndaro<br><br>hito ni awasete aruku na yo<br><br>oshietekureta no wa anta janai ka                                                                                                             | It’s fine if it’s just through music right?<br><br>We don’t have to walk in step with the rest<br><br>Weren’t you the one who taught me that?                                                                                                                                  | Chỉ cần âm nhạc là đủ, đừng có hùa theo người khác<br><br>Chẳng phải người đã nói cho tớ điều đó là cậu sao?                                                                                              |
+| どうだっていいよ、このまま遠くへ<br><br>誰も知らない場所で月明かりを探すのだ                                                           | doodatte ii yo, kono mama toku e<br><br>daremo shiranai basho de tsukiakari o sagasu no da                                                                                                                      | It doesn’t matter to me, let’s go some place far away right now<br><br>We’ll look for the moonlight in a place unbeknownst to anyone                                                                                                                                           | Sao cũng được hết, cứ thế này ta sẽ đi thật xa<br><br>Và tìm ánh trăng ở một nơi mà không ai biết tới                                                                                                     |
+| 名のない花が綺麗とか<br><br>どうでもいいことばっかだ<br><br>君の口癖が感染ってる<br><br>喉の真下に君がいる                                    | namonai hana ga kirei toka<br><br>doo demo ii koto bakka da<br><br>kimi no kushiguse ga utsutteru<br><br>koo no mashita ni wa kimi ga iru                                                                       | “Flowers without a name are pretty” and all that jazz<br><br>Doesn’t really matter to me <br><br>But that phrase of yours is rubbing off on me<br><br>Right below my throat is where you exist                                                                                 | Bông hoa vô danh thật đẹp đẽ, gì chứ toàn những thứ sao cũng được cả<br><br>Ở đâu cũng thấy câu cửa miệng của cậu<br><br>Ngay bên dưới cổ họng của tớ chính là cậu                                        |
+| 言葉も人生も愛想も全て捨ててこそ音楽だ<br><br>この価値も知らないあんたに わかって 堪るものか                                                  | kotoba mo seikatsu mo aiso mo<br>subete sutete koso ongako da<br><br>sono kachi mo shirani anta ni<br>wakatte tamaru mono ka                                                                                    | Only when you’ve thrown away my words, my life, my everything, can music be made<br><br>How can you not understand what it costs?                                                                                                                                              | Âm nhạc chính là phải vứt hết tiếng nói, cuộc sống, yêu thương<br><br>Không hiểu được giá trị của âm nhạc như các người hiểu được điều đó sao?                                                            |
+| 暮れない夕に茜追い付いて<br><br>僕を染め抜いた<br><br>いつか時間が全て追い抜いて<br><br>消えないで                                        | kurenai yuu ni akane oitsuite<br><br>boku o somenuita<br><br>itsu ka jikan ga subete oinuite<br><br>kienaide                                                                                                    | A madder red chased the ever bright evening<br><br>Neglecting to dye me<br><br>One day, time will overtake everything<br><br>But don’t disappear                                                                                                                               | Ánh hoàng hôn tô lên bầu trời không đêm, nhưng không tô lên tớ<br><br>Thời gian xin đừng đuổi kịp mọi thứ rồi biến mất                                                                                    |
+| 僕たち神様なんて知らん顔<br><br>世界の全部が欲しい<br><br>なぁ、心まで醜いあんたの思い出全部をくれよ                                           | bokutachi kami-sama nante shirankao<br><br>sekai no zenbu ga hoshii<br><br>naa kokoro made minikui anta no, omoide zenbu o kureyo                                                                               | We, who know not the face of the gods<br><br>Want the whole world<br><br>Hey, give me your all your memories, you’re ugly to the core                                                                                                                                          | Chúng ta mang trên mình khuôn mặt phớt lờ thần thánh, khao khát mọi thứ trên thế gian<br><br>Này cậu, kẻ đến cả trái tim cũng xấu xí, hãy cho tớ tất cả những kỷ niệm của cậu đi                          |
+| 価値観だって自由なら<br><br>人を傷つけていいだろ<br><br>教えなかったのはあんたじゃないか                                                 | kachikan datte jiyuu nara<br><br>hito o kizutsukete ii daro<br><br>oshienakatta no wa anta janai ka                                                                                                             | If this world’s values aren’t set<br><br>Then it’s okay to hurt each other, right?<br><br>Weren’t you the one who didn’t teach me that?                                                                                                                                        | Nếu giá trị quan cũng không bị gò bó, vậy thì tớ cũng có thể tổn thương người khác đúng không?<br><br>Cậu không hề nói cho tớ biết điều đó mà!                                                            |
+| どうだっていいよ、このまま遠くへ<br><br>誰も見てない場所で生きる真似をしているのさ<br><br>酷い顔で踊るのさ<br><br>胸も痛いままで                         | doodatte ii yo, kono mama toku e<br><br>daremo mitenai basho de ikiru mane o shiteru no sa<br><br>hidoi kao de odoru no sa<br><br>mune mo itai mama de                                                          | It doesn’t matter to me, let’s go some place far away right now<br><br>We’ll do our best imitation of living in a place no one is looking at<br><br>Dancing with ugly faces<br><br>While our chests ache                                                                       | Sao cũng được hết, tớ sẽ cứ vậy đi thật xa<br><br>Rồi bắt chước sự sống ở một nơi không ai biết đến<br><br>Tớ sẽ nhảy múa với khuôn mặt xấu xí,<br><br>trong khi trái tim vẫn đau đớn                     |
+| 神様僕たちなんて知らん顔<br><br>何処までだって行ける<br><br>なぁ、言葉が世界だと云うなら世界は僕らのものだ                                        | kami-sama bokutachi nante shirankao<br><br>dokomade datte ikeru<br><br>naa, kotoba ga sekai dato iunara, sekai wa bokura no monoda                                                                              | The gods, who know not our faces<br><br>Are able to go anywhere<br><br>Hey, if you say that words make up the world, then the world /is/ ours                                                                                                                                  | Thần thánh, ngài không coi chúng ta là gì cả, ngài có thể đi đến bất cứ nơi đâu<br><br>Này, nếu ngôn từ là thế giới, vậy thì thế giới này là của chúng ta rồi.                                            |
+| 忘れるなんて酷いだろ<br><br>幸せになんてなれるかよ<br><br>僕を歪めたのはあんたじゃないか<br><br>そうだって僕はこのまま遠くへ<br><br>誰も知らない場所で月明かりを探すのだ | wasureru nante hidoi daro<br><br>shiawase ni nante nareru ka yo<br><br>boku o yugameta no wa anta janai ka<br><br>soo datta, boku wa kono mama toku e<br><br>daremo shiranai basho de tsukiakari o sagasu no da | To forget is horrible right?<br><br>Will we be able to become happy that way?<br><br>Aren’t you the one who made me think this way?<br><br>That may be so, but regardless I’ll go some where far away right now<br><br>And look for moonlight in a place unbeknownst to anyone | Quên đi thì thật tàn nhẫn, quên đi thì hạnh phúc được sao?<br><br>Người đã làm tớ lệch lạc chính là cậu mà!<br><br>Đúng vậy, tớ sẽ cứ như vậy đi thật xa<br><br>Tìm ánh trăng ở một nơi không ai biết đến |
 ##### Notes
 >
