--- a/(2019) Elma/08. Walk.md
+++ b/(2019) Elma/08. Walk.md
@@ -1,20 +1,20 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-歩く | Aruku
+歩く | Aruku | Bước đi
 #### Lyrics
 
-| Japanese                                                                               | Romanji                                                                                                                                                                        | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/), [theyleaveshadows](https://docs.google.com/document/d/1v3jewbCoq3mP-7qKevFgUA5WSX795oqW1VDxc3zAm_c/)                         |
-| -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| 今日、死んでいくような<br><br>そんな感覚があった<br><br>ただ明日を待って<br><br>流る季節を見下ろした                         | Kyō, shindeku yōna<br><br>Sonna kankaku ga atta<br><br>Tada asu o matte<br><br>Nagaru kisetsu o mioroshita                                                                     | Today, I felt the sensation<br><br>Like I was starting to die<br><br>Just waiting for tomorrow<br><br>While I looked down on the changing seasons                                                                        |
-| どうせならって思うよ<br><br>もう随分遠くに来た<br><br>何も知らない振りは終わりにしよう                                    | Dōse naratte omou yo<br><br>Mō zuibun tōku ni kita<br><br>Nani mo shiranai furi wa owari ni shiyou                                                                             | Might as well, I think<br><br>I’ve come far enough <br><br>Let’s put an end to pretending not to know anything                                                                                                           |
-| 確かめるように石畳を歩いた<br><br>俯きながら行く   何も見えないように                                               | Tashikameru yōni ishidatami o aruita<br><br>Utsumuki nagara iku nani mo mienai yōni                                                                                            | I walked along the stone pavement to make sure<br><br>So that I wouldn’t see anything, I hung my head low while I walked                                                                                                 |
-| 君の旅した街を歩く<br><br>訳もないのに口を出てく<br><br>昨日まで僕は眠ってた<br><br>何も知らずにただ生きていたんだ<br><br>それだけなんだ   | Kimi no tabishita machi o aruku<br><br>Wake mo nai noni kuchi o deteku<br><br>Kinō made boku wa nemutteta<br><br>Nani mo shirazu ni tada ikiteita n da<br><br>Soredake na n da | I walk in the town you journeyed through <br><br>Without reason, it started coming out of my mouth<br><br>Until yesterday, I had been asleep<br><br>Merely existing without knowing a thing<br><br>That’s just how it is |
-| 今日、生きてるような<br><br>そんな錯覚があった<br><br>妄想でもいいんだ<br><br>君が居てくれたらいいや                         | Kyō, ikiteru yōna<br><br>Sonna sakkaku ga atta<br><br>Mōsō de mo ii n da<br><br>Kimi ga itekuretara ii ya                                                                      | Today, I hallucinated <br><br>That I was alive<br><br>I’d be fine if it was just in my delusions <br><br>I wish you could live on for me                                                                                 |
-| 悲しいような歌ばかり書く<br><br>頬を伝え花緑青<br><br>本当に全部を知ってるんだ                                        | Kanashii yōna uta bakari kaku<br><br>Hō o tsutae hana rokushō<br><br>Hontōha zenbu o shitteiru n da                                                                            | I write only of sad-like songs<br><br>With emerald green trailing your cheeks<br><br>I actually knew everything all along                                                                                                |
-| 夏の終わりだった<br>流れる雲を読んで<br><br>顔上げながら行く街は思い出の中                                            | Natsu no owari datta nagareru kumo o yonde<br><br>Kao age nagara iku machi wa omoide no naka                                                                                   | That it was the end of summer<br>Reading the clouds that passed above <br><br>The town I walk in where I have my head held high is in my memories                                                                        |
-| 君の言葉を食べて動く<br><br>僕の口には何が見える<br><br>今でもこの眼は眠ってる<br><br>何も見えずにただ君を見てる<br><br>彷徨うように     | Kimi no kotoba o tabete ugoku<br><br>Boku no kuchi ni wa nani ga mieru<br><br>Ima demo kono me wa nemutteru<br><br>Nani mo miezu ni tada kimi o miteru<br><br>Samayou yōni     | I move to eat your words<br><br>What can you see in my mouth?<br><br>Even now, these eyes are asleep<br><br>I was just looking at you without seeing anything <br><br>So that I could wander around                      |
-| あの丘の前に君がいる<br><br>その向こうには何が見える<br><br>言葉ばかりが口を伝う<br><br>何も知らないまま生きていたんだ<br><br>それだけなんだ | Ano oka no mae ni kimi ga iru<br><br>Sono mukō ni wa nani ga mieru<br><br>Kotoba bakari ga kuchi o tsutau<br><br>Nani mo shiranai mama ikiteita n da<br><br>Soredake na n da   | You’re there in front of that hill<br><br>What can you see from your side?<br><br>Only words reach my mouth<br><br>I existed without knowing anything <br><br>That’s all there is                                        |
-| 今でも、エイミー                                                                               | Ima demo, Eimi-                                                                                                                                                                | Even now, Amy                                                                                                                                                                                                            |
+| Japanese                                                                               | Romanji                                                                                                                                                                        | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/), [theyleaveshadows](https://docs.google.com/document/d/1v3jewbCoq3mP-7qKevFgUA5WSX795oqW1VDxc3zAm_c/)                         | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                           |
+| -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 今日、死んでいくような<br><br>そんな感覚があった<br><br>ただ明日を待って<br><br>流る季節を見下ろした                         | Kyō, shindeku yōna<br><br>Sonna kankaku ga atta<br><br>Tada asu o matte<br><br>Nagaru kisetsu o mioroshita                                                                     | Today, I felt the sensation<br><br>Like I was starting to die<br><br>Just waiting for tomorrow<br><br>While I looked down on the changing seasons                                                                        | Hôm nay tớ có cảm giác như mình sắp chết<br><br>Tớ chỉ đợi đến ngày mai, nhìn mùa hè trôi đi                                                                                                    |
+| どうせならって思うよ<br><br>もう随分遠くに来た<br><br>何も知らない振りは終わりにしよう                                    | Dōse naratte omou yo<br><br>Mō zuibun tōku ni kita<br><br>Nani mo shiranai furi wa owari ni shiyou                                                                             | Might as well, I think<br><br>I’ve come far enough <br><br>Let’s put an end to pretending not to know anything                                                                                                           | Tớ thấy đằng nào cũng vậy, mình đã đi khá xa rồi<br><br>Tớ nên chấm dứt việc giả vờ như không biết đi thôi                                                                                      |
+| 確かめるように石畳を歩いた<br><br>俯きながら行く   何も見えないように                                               | Tashikameru yōni ishidatami o aruita<br><br>Utsumuki nagara iku nani mo mienai yōni                                                                                            | I walked along the stone pavement to make sure<br><br>So that I wouldn’t see anything, I hung my head low while I walked                                                                                                 | Tớ bước đi trên con đường rải đá để xác nhận lại<br><br>Tớ cúi xuống bước đi để không nhìn thấy gì cả                                                                                           |
+| 君の旅した街を歩く<br><br>訳もないのに口を出てく<br><br>昨日まで僕は眠ってた<br><br>何も知らずにただ生きていたんだ<br><br>それだけなんだ   | Kimi no tabishita machi o aruku<br><br>Wake mo nai noni kuchi o deteku<br><br>Kinō made boku wa nemutteta<br><br>Nani mo shirazu ni tada ikiteita n da<br><br>Soredake na n da | I walk in the town you journeyed through <br><br>Without reason, it started coming out of my mouth<br><br>Until yesterday, I had been asleep<br><br>Merely existing without knowing a thing<br><br>That’s just how it is | Tớ rảo bước trong thành phố cậu đã đến, cất tiếng nói dù không hiểu sao<br><br>Tớ đã yên giấc cho đến ngày hôm qua<br><br>Tớ đã sống mà không biết đến điều gì cả<br><br>Chỉ vậy mà thôi        |
+| 今日、生きてるような<br><br>そんな錯覚があった<br><br>妄想でもいいんだ<br><br>君が居てくれたらいいや                         | Kyō, ikiteru yōna<br><br>Sonna sakkaku ga atta<br><br>Mōsō de mo ii n da<br><br>Kimi ga itekuretara ii ya                                                                      | Today, I hallucinated <br><br>That I was alive<br><br>I’d be fine if it was just in my delusions <br><br>I wish you could live on for me                                                                                 | Hôm nay tớ đã có ảo giác rằng mình đang sống<br><br>Ảo tưởng thôi cũng được, chỉ cần cậu ở bên tớ là được                                                                                       |
+| 悲しいような歌ばかり書く<br><br>頬を伝え花緑青<br><br>本当に全部を知ってるんだ                                        | Kanashii yōna uta bakari kaku<br><br>Hō o tsutae hana rokushō<br><br>Hontōha zenbu o shitteiru n da                                                                            | I write only of sad-like songs<br><br>With emerald green trailing your cheeks<br><br>I actually knew everything all along                                                                                                | Tớ toàn viết những bài hát buồn rầu<br><br>Chất Xanh Paris chảy dài trên gì má<br><br>Thực ra tớ biết tất cả đó                                                                                 |
+| 夏の終わりだった<br>流れる雲を読んで<br><br>顔上げながら行く街は思い出の中                                            | Natsu no owari datta nagareru kumo o yonde<br><br>Kao age nagara iku machi wa omoide no naka                                                                                   | That it was the end of summer<br>Reading the clouds that passed above <br><br>The town I walk in where I have my head held high is in my memories                                                                        | Mùa hè kết thúc rồi, nhìn những đám mây trôi<br><br>Tớ lại nhớ về thành phố mà tớ ngẩng mặt lên để đi                                                                                           |
+| 君の言葉を食べて動く<br><br>僕の口には何が見える<br><br>今でもこの眼は眠ってる<br><br>何も見えずにただ君を見てる<br><br>彷徨うように     | Kimi no kotoba o tabete ugoku<br><br>Boku no kuchi ni wa nani ga mieru<br><br>Ima demo kono me wa nemutteru<br><br>Nani mo miezu ni tada kimi o miteru<br><br>Samayou yōni     | I move to eat your words<br><br>What can you see in my mouth?<br><br>Even now, these eyes are asleep<br><br>I was just looking at you without seeing anything <br><br>So that I could wander around                      | Miệng tớ cử động nhờ ngôn từ của cậu, trong đó vẫn còn có gì đó<br><br>Đến bây giờ đôi mắt này vẫn đang say giấc<br><br>Tớ không thấy gì cả, chỉ thấy cậu mà thôi, như thể đang lạc lối         |
+| あの丘の前に君がいる<br><br>その向こうには何が見える<br><br>言葉ばかりが口を伝う<br><br>何も知らないまま生きていたんだ<br><br>それだけなんだ | Ano oka no mae ni kimi ga iru<br><br>Sono mukō ni wa nani ga mieru<br><br>Kotoba bakari ga kuchi o tsutau<br><br>Nani mo shiranai mama ikiteita n da<br><br>Soredake na n da   | You’re there in front of that hill<br><br>What can you see from your side?<br><br>Only words reach my mouth<br><br>I existed without knowing anything <br><br>That’s all there is                                        | Phía trước ngọn đồi cậu đang đứng đó<br><br>Phía bên kia ngọn đồi tớ thấy điều gì đó<br><br>Ngôn từ tuôn ra khỏi bờ môi tớ<br><br>Tớ đã sống mà không hay biết gì cả<br><br>Chỉ như vậy mà thôi |
+| 今でも、エイミー                                                                               | Ima demo, Eimi-                                                                                                                                                                | Even now, Amy                                                                                                                                                                                                            | Ngay bây giờ cũng vậy, Amy à                                                                                                                                                                    |
 ##### Notes
 >
