--- a/(2019) Elma/11. Voice.md
+++ b/(2019) Elma/11. Voice.md
@@ -1,16 +1,16 @@
 ```dataviewjs
 await dv.view('_script');
 ```
-声 | Koe
+声 | Koe | Giọng nói
 #### Lyrics
 
-| Japanese                                                                                                                    | Romanji                                                                                                                                                                                                                                   | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                      |
-| --------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| どうしたって触れない<br><br>どうやっても姿を見せない<br><br>簡単に忘れるくせに<br><br>もうちょっとだけ覚えていたい                                                       | Dō shita tte sawarenai<br><br>Dō yatte mo sugata o misenai<br><br>Kantan ni wasureru kuse ni<br><br>Mō chotto dake oboeteitai                                                                                                             | No matter what I do, I can’t touch you<br><br>Whatever I do, you won’t show yourself<br><br>I easily forget things, but<br><br>I just wanna remember it for a little while longer                                                                                                                                               |
-| この歌の在り処を                                                                                                                    | Kono uta no ari ka o                                                                                                                                                                                                                      | The space where this song exists                                                                                                                                                                                                                                                                                                |
-| わからないから言葉のずっと向こうで<br><br>この喉を通るさよなら 呑み込んで 笑っている<br><br>朝焼け空  唇痛いほど噛んで<br><br>虚しさは全部今日のものだ<br><br>わかっているけれど<br><br>わかっているけれど | Wakaranai kara kotoba no zutto mukō de<br><br>Kono nodo o tōru sayonara nomikonde waratteiru<br><br>Asayake sora, kuchibiru itai hodo kande<br><br>Munashisa wa zenbu kyō no mono da<br><br>Wakatteiru keredo<br><br>Wakatteiru keredo    | But I don’t know where it is, the far away place where these words exist<br><br>So I swallow down the goodbye that wants to escape my lips and laugh<br><br>The sky at sunrise, I chew on my lips till they hurt<br><br>This emptiness all belongs to today<br><br>Despite knowing that, I...<br><br>Despite knowing that, I... |
-| 話すとき顔を出す<br><br>出てきたってすぐに消えてく<br><br>泣くときに溢れる<br><br>黙ったって喉の奥にいる、神様の話                                                       | Hanasu toki kao o dasu<br><br>Deteki tatte sugu ni kieteku<br><br>Naku tokini afureru<br><br>Damatta tte nodo no oku ni iru, kamisama no hanashi                                                                                          | When I speak, you show your face<br><br>But as soon as I say “you’ve arrived!” you disappear<br><br>When I cry, my tears overflow<br><br>The words stay lodged deep in my throat: “I’ve stayed silent”. They’re the words of gods.                                                                                              |
-| 描きたいのは心の空いた時間だ<br><br>言葉よりずっと重い人生はマシンガン<br><br>さよならの形をただ埋められないと零して<br><br>僕らは昨日も今日もここで座っているばかり<br><br>笑っているばかり              | Egakitai no wa kokoro ni aita jikan da<br><br>Kotoba yori zutto omoi jinsei wa mashin gan<br><br>Sayonara no katachi o tada umerarenai to koboshite<br><br>Bokura wa kinō mo kyō mo koko de suwatteiru bakari<br><br>Waratteiru bakari    | I want to draw the time where my heart had a hole in it<br><br>This life that’s far heavier than the weight of my words is a machine gun <br><br>Just burying the shape of our goodbye causes it to spill over <br><br>Yesterday and today, we stay only seated here<br><br>Only laughing                                       |
-| わからないから言葉のずっと向こうで<br><br>この喉を通るさよなら 呑み込んで 眠っている<br><br>朝焼け空  唇痛いほど噛んで<br><br>貴方の世界は今日も知らない<br><br>私がいるばかり<br><br>わかっているばかり  | Wakaranai kara kotoba no zutto mukō de<br><br>Kono nodo o tōru sayonara nomikonde nemutteiru<br><br>Asayake sora, kuchibiru itai hodo kanda<br><br>Anata no sekai o kyō mo shiranai<br><br>Watashi ga iru bakari<br><br>Waratteiru bakari | But I don’t know where it is, the far away where these words exist<br><br>So I swallow down the goodbye that wants to escape my lips and lay myself to sleep<br><br>The sky at sunrise, I chew on my lips till they hurt<br><br>I still don’t know the world you exist in<br><br>Only I exist here<br><br>That’s all I know     |
+| Japanese                                                                                                                    | Romanji                                                                                                                                                                                                                                   | [rachie](https://docs.google.com/document/d/1oTZmQU1CqN5M5_JJMv46J7dZn8qqS7xdGz-jADwnApI/)                                                                                                                                                                                                                                      | [pikapika](https://pikapika-translate.blogspot.com/2021/05/elma.html)                                                                                                                                                                                                                            |
+| --------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| どうしたって触れない<br><br>どうやっても姿を見せない<br><br>簡単に忘れるくせに<br><br>もうちょっとだけ覚えていたい                                                       | Dō shita tte sawarenai<br><br>Dō yatte mo sugata o misenai<br><br>Kantan ni wasureru kuse ni<br><br>Mō chotto dake oboeteitai                                                                                                             | No matter what I do, I can’t touch you<br><br>Whatever I do, you won’t show yourself<br><br>I easily forget things, but<br><br>I just wanna remember it for a little while longer                                                                                                                                               | Không cách nào để chạm vào được, cũng không thể nào nhìn thấy được<br><br>Dù dễ dàng quên đi, nhưng tớ vẫn muốn nhớ lâu hơn chút nữa                                                                                                                                                             |
+| この歌の在り処を                                                                                                                    | Kono uta no ari ka o                                                                                                                                                                                                                      | The space where this song exists                                                                                                                                                                                                                                                                                                | Sự tồn tại của bài hát này.                                                                                                                                                                                                                                                                      |
+| わからないから言葉のずっと向こうで<br><br>この喉を通るさよなら 呑み込んで 笑っている<br><br>朝焼け空  唇痛いほど噛んで<br><br>虚しさは全部今日のものだ<br><br>わかっているけれど<br><br>わかっているけれど | Wakaranai kara kotoba no zutto mukō de<br><br>Kono nodo o tōru sayonara nomikonde waratteiru<br><br>Asayake sora, kuchibiru itai hodo kande<br><br>Munashisa wa zenbu kyō no mono da<br><br>Wakatteiru keredo<br><br>Wakatteiru keredo    | But I don’t know where it is, the far away place where these words exist<br><br>So I swallow down the goodbye that wants to escape my lips and laugh<br><br>The sky at sunrise, I chew on my lips till they hurt<br><br>This emptiness all belongs to today<br><br>Despite knowing that, I...<br><br>Despite knowing that, I... | Tớ không hiểu, nên ở phía bên kia của lời nói<br><br>Tớ nuốt ngược lại lời tạm biệt đang đi ra khỏi cổ và mỉm cười<br><br>Bình minh đỏ rực trên trời, tớ cắn môi đến đau nhức<br><br>Sự trống rỗng này tất cả chỉ trong hôm nay mà thôi<br><br>Tớ hiểu chứ, tớ hiểu chứ                          |
+| 話すとき顔を出す<br><br>出てきたってすぐに消えてく<br><br>泣くときに溢れる<br><br>黙ったって喉の奥にいる、神様の話                                                       | Hanasu toki kao o dasu<br><br>Deteki tatte sugu ni kieteku<br><br>Naku tokini afureru<br><br>Damatta tte nodo no oku ni iru, kamisama no hanashi                                                                                          | When I speak, you show your face<br><br>But as soon as I say “you’ve arrived!” you disappear<br><br>When I cry, my tears overflow<br><br>The words stay lodged deep in my throat: “I’ve stayed silent”. They’re the words of gods.                                                                                              | Cứ khi nói chuyện thì sẽ ló mặt<br><br>Xuất hiện rồi sẽ ngay lập tức biến mất<br><br>Lúc rơi nước mắt thì ứ đầy<br><br>Dẫu im lặng vẫn kẹt lại trong cổ họng, chính là câu chuyện của vị thần                                                                                                    |
+| 描きたいのは心の空いた時間だ<br><br>言葉よりずっと重い人生はマシンガン<br><br>さよならの形をただ埋められないと零して<br><br>僕らは昨日も今日もここで座っているばかり<br><br>笑っているばかり              | Egakitai no wa kokoro ni aita jikan da<br><br>Kotoba yori zutto omoi jinsei wa mashin gan<br><br>Sayonara no katachi o tada umerarenai to koboshite<br><br>Bokura wa kinō mo kyō mo koko de suwatteiru bakari<br><br>Waratteiru bakari    | I want to draw the time where my heart had a hole in it<br><br>This life that’s far heavier than the weight of my words is a machine gun <br><br>Just burying the shape of our goodbye causes it to spill over <br><br>Yesterday and today, we stay only seated here<br><br>Only laughing                                       | Thứ tớ muốn vẽ ra chính là khoảng thời gian mở ra trong tim tớ<br><br>Cuộc sống còn nặng nề hơn cả ngôn từ này là một khẩu súng<br><br>Nếu không thể mãi mãi lấp đầy dáng hình lời tạm biệt thì sẽ nổ<br><br>Chúng ta ngày hôm qua và cả hôm nay vẫn chỉ ngồi đây<br><br>Và mỉm cười<br>         |
+| わからないから言葉のずっと向こうで<br><br>この喉を通るさよなら 呑み込んで 眠っている<br><br>朝焼け空  唇痛いほど噛んで<br><br>貴方の世界は今日も知らない<br><br>私がいるばかり<br><br>わかっているばかり  | Wakaranai kara kotoba no zutto mukō de<br><br>Kono nodo o tōru sayonara nomikonde nemutteiru<br><br>Asayake sora, kuchibiru itai hodo kanda<br><br>Anata no sekai o kyō mo shiranai<br><br>Watashi ga iru bakari<br><br>Waratteiru bakari | But I don’t know where it is, the far away where these words exist<br><br>So I swallow down the goodbye that wants to escape my lips and lay myself to sleep<br><br>The sky at sunrise, I chew on my lips till they hurt<br><br>I still don’t know the world you exist in<br><br>Only I exist here<br><br>That’s all I know     | Tớ không hiểu, nên ở phía bên kia của lời nói<br><br>Tớ nuốt ngược lại lời tạm biệt đang đi ra khỏi cổ<br><br>Và chìm vào giấc ngủ<br><br>Bình minh đỏ rực trên trời, tớ cắn môi đến đau nhức<br><br>Hôm nay tớ vẫn chưa đến được thế giới của cậu<br><br>Chỉ còn mình tớ, ngồi đây cười mà thôi |
 ##### Notes
 >
